增加全角色S技与招牌中文名称

--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -213,14 +213,14 @@
 <li>近战暴击最高60%概率流血（重击和脚踢其实也是会出流血的），4秒，30~68%的攻击伤害。</li>
 <li>连砍四层流血会砍晕对手，岂不美哉。技术好的玩家懂得在平砍过程中盯着流血层数，到三层的时候做好准备，一旦砍晕，马上后退点两枪再上去砍，一方面加大输出，另一方面远程小枪击中流血的对手也会35%的概率晕。</li>
 <li>重击可以穿过远程小枪和远程重击（除了探长的精准弹）。在游戏早期重击距离超长的时候，风刃“点两枪+重击”的打法十分无赖，后来缩短之后重击回归平淡，但还是可以在被声波/蝎子重击压墙角的时候脱身，或者爆威出霸体乱放炮的时候硬怼。</li>
-<li>S1暴击也会流血，但主要的性能是震击和阻止加气。震击前和震击中发动的加气都会被阻断，例如声波的加气、机器人资源模块的加气。但是不能阻断能量功率的加成（例如热破的招牌）。</li>
-<li>S2拥有护甲穿透，可以配合剑圣协同打出高伤害。</li>
-<li>S3虽然热闹，连击数很好看，但是伤害很低，35%的概率晕也很难吸引人使用。</li>
+<li>S1（电路限制器）暴击也会流血，但主要的性能是震击和阻止加气。震击前和震击中发动的加气都会被阻断，例如声波的加气、机器人资源模块的加气。但是不能阻断能量功率的加成（例如热破的招牌）。</li>
+<li>S2（剑舞）拥有护甲穿透，可以配合剑圣协同打出高伤害。</li>
+<li>S3（空中扫射）虽然热闹，连击数也很好看，但是伤害很低，35%的概率晕也很难吸引人使用，除了可以堆高一些追星者的伤害。</li>
 </ul>
 </div>
 <div id="招牌-27" class="section level4 hasAnchor" number="6.1.1.2">
 <h4><span class="header-section-number">6.1.1.2</span> 招牌<a href="侦查系.html#招牌-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>根据对手的血量进一步提升自己的暴击率，血量越少暴击越高。这让风刃可以尽早结束战斗，弥补自己身板比较脆的不足。</p>
+<p><strong>决心</strong>：根据对手的血量进一步提升自己的暴击率，血量越少暴击越高。这让风刃可以尽早结束战斗，弥补自己身板比较脆的不足。</p>
 </div>
 <div id="协同-27" class="section level4 hasAnchor" number="6.1.1.3">
 <h4><span class="header-section-number">6.1.1.3</span> 协同<a href="侦查系.html#协同-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -266,20 +266,20 @@
 <ul>
 <li>击倒后起身最高85%的概率规避各种攻击3秒，像一只泥鳅一样根本逮不住，如果没有100%的规避克制（热破，阿尔茜），平时不要随意放倒路障。而玩家的路障被击倒后，则要利用好这3秒的规避和6~7秒的暴击率提升大举反扑。</li>
 <li>近战攻击根据对手能量提升79-144%的暴击伤害</li>
-<li>逆火，在爵士和蝎子出来之前这是路障最有特色的技能：远程小枪有<del>20%</del>25%的概率施加逆火，S1能100%施加
+<li>逆火，在爵士和蝎子出来之前这是路障最有特色的技能：远程小枪有<del>20%</del>25%的概率施加逆火，S1（惩罚）能100%施加
 <ul>
 <li>但是可能是游戏商的疏忽，一直没有像蝎子那样写清逆火伤害到底是多少</li>
 <li>路障逆火的能力在惊天雷出来前一直不算一种debuff，结果惊天雷净化不了。新人物不能碾压旧人物那还了得？于是厂商改成了可以净化。</li>
 <li>这样又不可避免伤害了<del>本来就为数不多的</del>路障玩家们的感情，于是厂商提升到了25%的概率并且增加了一种特性：<strong>连续堆上三层逆火后，会转化为“半永久”逆火</strong>，也就是路障只要不被击倒，那个逆火图标就没有过期时间（颜色比普通逆火图标要深一点），也不能被净化。</li>
 </ul></li>
-<li>S2除了伤害挺高还能偷取对方最多36%的能量，注意和警车的消气不同，路障偷过来的能量是加给自己，使用得法的话路障可以反复获得多个S2。</li>
-<li>S3在25秒内提升25%的暴击率。</li>
+<li>S2（镇压）除了伤害挺高还能偷取对方最多36%的能量，注意和警车的消气不同，路障偷过来的能量是加给自己，使用得法的话路障可以反复获得多个S2。</li>
+<li>S3（派遣）在25秒内提升25%的暴击率。</li>
 </ul>
 <p>可以说，对方的能量在路障眼里横竖都是“为我所用”：留着能量不放，路障提升暴击伤害，到了S2可以直接偷过来，放特殊的话，很可能吃逆火，也是伤害。</p>
 </div>
 <div id="招牌-28" class="section level4 hasAnchor" number="6.2.1.2">
 <h4><span class="header-section-number">6.2.1.2</span> 招牌<a href="侦查系.html#招牌-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>没有觉醒前的路障可以最多叠加2层（一层小枪的，一层S1的），觉醒后小枪逆火可叠加，时间延长，保障一定的输出。</p>
+<p><strong>坏警察</strong>：没有觉醒前的路障可以最多叠加2层（一层小枪的，一层S1的），觉醒后小枪逆火可叠加，时间延长，保障一定的输出。</p>
 </div>
 <div id="协同-28" class="section level4 hasAnchor" number="6.2.1.3">
 <h4><span class="header-section-number">6.2.1.3</span> 协同<a href="侦查系.html#协同-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -332,15 +332,15 @@
 <li>重击净化身上的所有震击并刷新所有暴击伤害加成</li>
 <li>横炮的三个S技各有妙用：
 <ul>
-<li>S1获得暴击率加成，并有40%的概率击晕2.5秒。这与救护车完全相同，所以一旦发现击晕，落地马上狂按小枪，5发后前冲都来得及。</li>
-<li>S2获得8秒近战规避，并且有100%的概率燃烧。带着10层暴击打中S2，则会在10秒内获得50%的暴击伤害加成。</li>
-<li>S3除了最后的导弹，每一击都60%的概率驱散对方一个加成，因为用得比较少，所以不太清楚能驱散的类型，估计和狂飙红蜘蛛类似。最后的导弹100%施加燃烧。</li>
+<li>S1（招摇）获得暴击率加成，并有40%的概率击晕2.5秒。这与救护车完全相同，所以一旦发现击晕，落地马上狂按小枪，5发后前冲都来得及。</li>
+<li>S2（返校大作战）获得8秒近战规避，并且有100%的概率燃烧。带着10层暴击打中S2，则会在10秒内获得50%的暴击伤害加成。</li>
+<li>S3（霹雳舞对决）除了最后的导弹，每一击都60%的概率驱散对方一个加成，因为用得比较少，所以不太清楚能驱散的类型，估计和狂飙红蜘蛛类似。最后的导弹100%施加燃烧。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-29" class="section level4 hasAnchor" number="6.3.1.2">
 <h4><span class="header-section-number">6.3.1.2</span> 招牌<a href="侦查系.html#招牌-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>开局12秒给自己加气。5级加41.2%，100级加<del>100%</del>（后调整为减半，100级加50%）。短战斗中，横炮可以先声夺人打出S1，一旦打晕，很快又能有S1，运气好的话连晕两次战斗就结束了。</p>
+<p><strong>最大推力</strong>：开局12秒给自己加气。5级加41.2%，100级加<del>100%</del>（后调整为减半，100级加50%）。短战斗中，横炮可以先声夺人打出S1，一旦打晕，很快又能有S1，运气好的话连晕两次战斗就结束了。</p>
 </div>
 <div id="协同-29" class="section level4 hasAnchor" number="6.3.1.3">
 <h4><span class="header-section-number">6.3.1.3</span> 协同<a href="侦查系.html#协同-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -402,14 +402,14 @@
 <ul>
 <li>后闪时开始充近战buff，最多10层，充能时有概率规避攻击，充能途中被击中/出规避或者警车主动前冲则打断充能，在6秒内警车拥有近战buff。</li>
 <li>警车的技能中没有写明，但他的远程小枪是有概率晕的。根据扒出来的数据显示，平时一梭子弹里的第一发有10%的概率晕1.5秒，充能时开枪则概率上升到80%。</li>
-<li>S1：这应该是游戏中价值最高的S1之一，能与之抗衡的只有震荡波和斗擎。因为此招命中会迅速地削减对方大量能量，5阶的警车一次砍掉对方36.4%，对方气红的危急时刻可以迅速变成只剩S1。</li>
-<li>S2：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。另外，这个技能可以触发小黄蜂的近战规避，要小心<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>。</li>
-<li>S3：跟优秀的S1/S2比没有太多用武之地。能量锁定虽然有16秒，但在动画中就消耗了不少时间。但有时也会因为躲在屏幕一边打相持没找到机会连S1或者S2，充气又太快到了S3，也不失为一种放心输出的机会。</li>
+<li>S1（短路）：这应该是游戏中价值最高的S1之一，能与之抗衡的只有震荡波和斗擎。因为此招命中会迅速地削减对方大量能量，5阶的警车一次砍掉对方36.4%，对方气红的危急时刻可以迅速变成只剩S1。</li>
+<li>S2（枪手）：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。另外，这个技能可以触发小黄蜂的近战规避，要小心<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a>。</li>
+<li>S3（运输护卫）：跟优秀的S1/S2比没有太多用武之地。能量锁定虽然有16秒，但在动画中就消耗了不少时间。但有时也会因为躲在屏幕一边打相持没找到机会连S1或者S2，充气又太快到了S3，也不失为一种放心输出的机会。</li>
 </ul>
 </div>
 <div id="招牌-30" class="section level4 hasAnchor" number="6.4.1.2">
 <h4><span class="header-section-number">6.4.1.2</span> 招牌<a href="侦查系.html#招牌-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>充能完毕给自己加气。这是游戏中公认数一数二的招牌，它让警车在不需要碰到对方的前提下给自己加气，再配合S1的减气，可以让警车始终将对方的特殊技扼杀在萌芽状态，再难的敌人也如同拔了牙的老虎。很多人认为警车招牌越高越好，实则未必，后面打法中会提到原因。</p>
+<p><strong>好警察</strong>：充能完毕根据招牌等级乘以充能的层数给自己加气。这是游戏中公认数一数二的招牌，它让警车在不需要碰到对方的前提下给自己加气，再配合S1的减气，可以让警车始终将对方的特殊技扼杀在萌芽状态，再难的敌人也如同拔了牙的老虎。很多人认为警车招牌越高越好，实则未必，后面打法中会提到原因。</p>
 </div>
 <div id="协同-30" class="section level4 hasAnchor" number="6.4.1.3">
 <h4><span class="header-section-number">6.4.1.3</span> 协同<a href="侦查系.html#协同-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -460,15 +460,15 @@
 <li>后闪获得近战规避加成（24~32%，触发规避后消失。注意：会规避警车的S2。这让小黄蜂作为敌人的时候特别难缠。</li>
 <li>侧闪获得暴击率加成（20~28%），最多攒三个，打中对方时（无论近战/远程，无论是否暴击）每次消耗一个。</li>
 <li>暴击会瓦解任何护盾并施加5秒震击。这让小黄蜂对付多个科技系角色游刃有余，并且他还能打破能量晶体护盾这种变态模块，把本来烦死人的拉锯战变回到竞技场难度。</li>
-<li>S1提升60%的暴击伤害，配合小黄蜂可以攒到的三个暴击率加成，在连S技时的技巧是打一到两拳马上跟S1，否则S1打不出暴击就亏了。</li>
-<li>S2伤害不俗并锁气10秒，配合招牌，可以连续对敌人形成不错的控制。</li>
-<li>S3得到20个暴击率加成，打中对方时每次消耗一个，这也弥补了S3伤害很低的问题。并且因为S3全程算近战，觉醒后整个过程还是加气的。</li>
+<li>S1（黄金猛踢）提升60%的暴击伤害，配合小黄蜂可以攒到的三个暴击率加成，在连S技时的技巧是打一到两拳马上跟S1，否则S1打不出暴击就亏了。</li>
+<li>S2（能量拥堵）伤害不俗并锁气10秒，配合招牌，可以连续对敌人形成不错的控制。</li>
+<li>S3（驰骋之旅）得到20个暴击率加成，打中对方时每次消耗一个，这也弥补了S3伤害很低的问题。并且因为S3全程算近战，觉醒后整个过程还是加气的。</li>
 </ul>
 <p>小黄蜂的前冲攻击是飞踢，压起身要特别小心。地面类载具的对手如果起身放重击，很有可能小黄蜂踢不到他们，会吃重击。</p>
 </div>
 <div id="招牌-31" class="section level4 hasAnchor" number="6.5.1.2">
 <h4><span class="header-section-number">6.5.1.2</span> 招牌<a href="侦查系.html#招牌-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>进入对手近战距离时自动加气，这额外的加气不影响正常进攻和挨打时的加气，但越接近气满时加得越慢，不会自动加到红）。在对手身边的时候还会获得10%的加攻。</p>
+<p><strong>蜂之勇气</strong>：进入对手近战距离时自动加气，这额外的加气不影响正常进攻和挨打时的加气，但越接近气满时加得越慢，不会自动加到红）。在对手身边的时候还会获得10%的加攻。</p>
 <p>这是一个相当有价值也值得高觉醒的招牌，侦查系里面除了警车，其他人的技能都不是很吃招牌，所以如果你的主力就是小黄蜂的话，一定要尽量喂招牌，因为高觉醒后可以与他S2的锁气形成更紧密的循环锁气效果，抑制住对方的大招。高觉醒的小黄蜂敌人也很难用近战选手去打，因为打着打着他就气满了，等他放你一个S3，动画结束时又快一格气了。</p>
 </div>
 <div id="协同-31" class="section level4 hasAnchor" number="6.5.1.3">
@@ -520,9 +520,9 @@
 </ul></li>
 <li>S技各有妙用
 <ul>
-<li>S1可以把能量流失的层数转化为震击层数，获取很好的输出</li>
-<li>S2首先提升30%的暴击率8秒，旋风翅膀斩出暴击可以100%施加多层能量流失与流血，是输出和控制俱佳的技能，配合S1的转化可以更大程度地输出</li>
-<li>S3根据对方能量流失的层数每层回3%的血，经测试最大只能用6层，也就是回18%，多余的能量流失依然会保留在对方那边。但这已经是很可观的回血了，大大弥补了反冲身板脆的弱点。</li>
+<li>S1（震击伤口）可以把能量流失的层数转化为震击层数，获取很好的输出</li>
+<li>S2（划破）首先提升30%的暴击率8秒，旋风翅膀斩出暴击可以100%施加多层能量流失与流血，是输出和控制俱佳的技能，配合S1的转化可以更大程度地输出</li>
+<li>S3（需要投喂）根据对方能量流失的层数每层回3%的血，经测试最大只能用6层，也就是回18%，多余的能量流失依然会保留在对方那边。但这已经是很可观的回血了，大大弥补了反冲身板脆的弱点。</li>
 </ul></li>
 <li>反冲的重击是科技系的噩梦：命中对方时可以清除掉对方身上所有的能量提升效果（主要是紫色能量增加和能量功率增加），并且不管是否命中，都清除自己身上的震击和能量减少（能量流失，能量锁定，能量功率降低，甚至还有热破的减速）效果，并按处理掉的效果个数转换为自己的能量，每一效果变成自己总能量槽的6%（6阶的效果）。所以在面对机器人资源模块的时候，反冲一个重击就能解决掉，让气天尊回到震天尊的水平；面对震击格挡的模块，反冲也一点都不怕。但是近战打犀牛时如果吃到反震要考虑一下：如果四连击内能把盾全部打掉，那就打掉盾再重击清除，否则急于重击的结果很可能是重击又吃一个反震，还得再重击一次。</li>
 <li>前冲时被对方闪避会获得30%多概率的规避，由于反冲重击回弹比较大，压起身有时会扑空，规避能一定程度上防止对方打回头。而我方面对反冲对手的时候，侧闪反击就要注意了。</li>
@@ -531,7 +531,7 @@
 </div>
 <div id="招牌-32" class="section level4 hasAnchor" number="6.6.1.2">
 <h4><span class="header-section-number">6.6.1.2</span> 招牌<a href="侦查系.html#招牌-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>概率触发变形齿轮破坏，此时对方的能量功率降低30%，持续10秒，并且在这个过程中如果变形的话会直接晕掉（与其说是变形还不如说就是重击，因为声波重击过程中不变形也会晕，录音机S1变形也不会晕）。初始概率1/3左右。</p>
+<p><strong>T-齿轮破坏</strong>：概率触发变形齿轮破坏，此时对方的能量功率降低30%，持续10秒，并且在这个过程中如果变形的话会直接晕掉（与其说是变形还不如说就是重击，因为声波重击过程中不变形也会晕，录音机S1变形也不会晕）。初始概率1/3左右。</p>
 <p>这个技能其实作用不大，因为反冲的轻连击和中连击都是脚踢的动作结束，脚踢攻击加30%的暴击率，对于反冲来说显然更适合5连而不是4连加重击。再说重击回弹的破绽也大，所以不宜滥用。重击都要少用，那出不出招牌就更加随缘了。出了招牌后，对方也不知道什么时候会变形，突然晕在那里也容易打乱自己的节奏。所以招牌也就适合对付那些重击非常容易预测的对手，比方说声波或者出霸体的爆威，或者蹒跚模块。</p>
 </div>
 <div id="协同-32" class="section level4 hasAnchor" number="6.6.1.3">
@@ -593,16 +593,16 @@
 <li>前冲和重击的时候无视对方远程小枪和远程重击，这里“无视”有两种处理方式，先算20%的概率让对方的射击打空，这时黄豹直接像幻影和风刃一样透明化穿过射击，打中对手。另外80%的概率，黄豹会自动规避，闪到一边。这样的技能在不考虑续航的场合比如争分夺秒赢了就行的突袭中，可以让黄豹很放肆，在相持中猜到对方要开枪，不用对枪或者侧闪，直接冲过去或者放重击，并且在前冲或者重击的过程中狂按出拳，万一没有穿透而是规避了，第一时间抢攻。更多的时候，这个能力就是防止我方误判，一不小心冲向对方子弹。</li>
 <li>S技：
 <ul>
-<li>S1施加流血8秒，70%的攻击，同时100%施加修复阻止，禁止对方回血，克死了震荡波/救护车/纳米千/爆威/科技蝎，黄蜂就算能复活，也是空血复活。而且可以通过近战造流血延长修复阻止的时间，因为只要对方不停止流血，就一直无法修复。</li>
-<li>S2伤害高，关键是12秒内还提高自己能量功率50%。</li>
-<li>S3锁气+漏气专治打红；</li>
+<li>S1（变形金属创伤）施加流血8秒，70%的攻击，同时100%施加修复阻止，禁止对方回血，克死了震荡波/救护车/纳米千/爆威/科技蝎，黄蜂就算能复活，也是空血复活。而且可以通过近战造流血延长修复阻止的时间，因为只要对方不停止流血，就一直无法修复。</li>
+<li>S2（类星体爆破）伤害高，关键是12秒内还提高自己能量功率50%。</li>
+<li>S3（巨无霸过载）锁气+漏气专治打红；</li>
 <li>S2和S3发动时，对方的气越少，额外杀伤力越大（S2最大增伤50%，S3最大增伤100%），所以如有机会最好在骗招之后使用。但是不建议为了骗招错过招牌的有效时间。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-33" class="section level4 hasAnchor" number="6.7.1.2">
 <h4><span class="header-section-number">6.7.1.2</span> 招牌<a href="侦查系.html#招牌-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>野生突击</strong>，这是一个面面俱到的神奇招牌：</p>
+<p><strong>野生突击</strong>：这是一个面面俱到的神奇招牌。</p>
 <ul>
 <li>首先是阻止对方触发能力<strong>的效果</strong>。具体来说，就算能力图标会出现，但是不起效果，比如声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。不过治不了震天尊的白球（只能说复活和无敌大过天……）。其他大部分能力如回血、DOT都是可以阻止的。招牌有效期内黄豹的攻击不会被规避，所以连接S技是非常稳的。另外要注意：<strong>不会阻止模块带来的效果</strong>，比如夜莺触发的规避。</li>
 <li>其次是招牌过程中打穿对手所有减伤，之前写的是护甲、护盾，但不知道何时改成了只有护甲。总之猩猩引以为傲的抗暴护甲，黄豹出招牌时一个S2下去伤害依然可观。</li>
@@ -662,14 +662,14 @@
 </ul></li>
 <li>暴击加成：5次连击加一层暴击率，连击保持下去，爵士可以轻轻松松得到非常高的暴击率。被打中一次就归零。</li>
 <li>当爵士躲掉对手特殊技的第一下之后将会触发规避6秒，规避概率36~44%，近战远程和特殊都可以规避。</li>
-<li>S1打击混乱的对手时，每一击都有20%的概率打晕3秒，暴击击打眩晕的对手时会加暴击伤害。</li>
-<li>S2太优秀了：施加混乱并当场锁定对方的第3招。此后对方只要没有解除混乱状态，第3招就一直锁定。爵士在连招时就算看到对方即将打红，也可以放心地连上S2。因为对手虽然有三格气，但被锁了第三招时只能放出S2，而因为处于混乱状态往往也会很快放，红气警报瞬间解除。即使一时不放，稍微采用放风筝的方法命中重击刷新混乱时间，早晚能骗出来。</li>
-<li>S3：爵士出来之后有人说“逆火的祖宗来了”——此招施加一个永久逆火，并且对方无法移除。此后再配合骗招能给爵士持续的被动输出。</li>
+<li>S1（旋风腿）打击混乱的对手时，每一击都有20%的概率打晕3秒，暴击击打眩晕的对手时会加暴击伤害。</li>
+<li>S2（炫目展示）太优秀了：施加混乱并当场锁定对方的第3招。此后对方只要没有解除混乱状态，第3招就一直锁定。爵士在连招时就算看到对方即将打红，也可以放心地连上S2。因为对手虽然有三格气，但被锁了第三招时只能放出S2，而因为处于混乱状态往往也会很快放，红气警报瞬间解除。即使一时不放，稍微采用放风筝的方法命中重击刷新混乱时间，早晚能骗出来。</li>
+<li>S3（搏击节奏）：爵士出来之后有人说“逆火的祖宗来了”——此招施加一个永久逆火，也就是说对方放S技时虽然吃伤害但无法移除逆火（不过惊天雷还是可以净化掉）。此后再配合骗招能给爵士持续的被动输出。</li>
 </ul>
 </div>
 <div id="招牌-34" class="section level4 hasAnchor" number="6.8.1.2">
 <h4><span class="header-section-number">6.8.1.2</span> 招牌<a href="侦查系.html#招牌-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>耗竭：处于混乱的对手，招式每打空一下就会被扣气一定的百分比。5级扣1.5%，100级扣6%。换句话说爵士只要跟混乱中的对手展开灵巧的闪躲，就能把对方的气给扣下来。不仅如此，对方因为扣气而失去一招必杀时（从红变黄，从黄变绿，从绿变灰）还会晕一秒。例如爵士在打红对手然后用s2锁定对方第3招的时候，对方就算不放大招，只要一招被闪过，就可以把3格气减到不足3格，从而晕掉。</p>
+<p><strong>耗竭</strong>：处于混乱的对手，招式每打空一下就会被扣气一定的百分比。5级扣1.5%，100级扣6%。换句话说爵士只要跟混乱中的对手展开灵巧的闪躲，就能把对方的气给扣下来。不仅如此，对方因为扣气而失去一招必杀时（从红变黄，从黄变绿，从绿变灰）还会晕一秒。例如爵士在打红对手然后用s2锁定对方第3招的时候，对方就算不放大招，只要一招被闪过，就可以把3格气减到不足3格，从而晕掉。</p>
 <p>然而这个招牌，更多的时候是在帮倒忙——因为在混乱状态中，对方最好是能够正常行动放出大招，而不是晕掉。看见对方晕掉你上去打，实际上又把气给打满了，指望这个招牌来控气实在是没必要。而且这晕的时间是个恒定值，不管怎么觉醒都只有一秒，实在是太短反应不过来。总的来说爵士觉醒随缘就好，不需要觉醒程序，更别浪费招牌。</p>
 </div>
 <div id="协同-34" class="section level4 hasAnchor" number="6.8.1.3">
@@ -737,16 +737,16 @@
 </ul></li>
 <li>S技：
 <ul>
-<li>S1：大黄蜂S1的动作。最后一击有20%的概率施加修复阻止6秒（如果出暴击则为10秒），对方身上每个减益增加10%的概率。没有黄豹那么稳，但对付回血技能和模块，实用性也不错了。</li>
-<li>S2：阿尔茜S2的动作改出来的，并且明明是空手攻击，却带着兵器的叮叮铛铛声。第一击有50%的概率施加能量锁定<a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a>5秒，出暴击则为9秒。</li>
-<li>S3：风刃的S3动作。施加三层逆火15秒，且不能被净化。60%的概率施加能量流失，12秒内扣减对方总能量的25%。因为有长时间的能量流失，可以全力进攻不怕打红，逼对方用S2来吃逆火大伤害。</li>
+<li>S1（抢先行动）：大黄蜂S1的动作。最后一击有20%的概率施加修复阻止6秒（如果出暴击则为10秒），对方身上每个减益增加10%的概率。没有黄豹那么稳，但对付回血技能和模块，实用性也不错了。</li>
+<li>S2（永不退缩）：阿尔茜S2的动作改出来的，并且明明是空手攻击，却带着兵器的叮叮铛铛声。第一击有50%的概率施加能量锁定<a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a>5秒，出暴击则为9秒。</li>
+<li>S3（声波打击）：风刃的S3动作。施加三层逆火15秒，且不能被净化。60%的概率施加能量流失，12秒内扣减对方总能量的25%。因为有长时间的能量流失，可以全力进攻不怕打红，逼对方用S2来吃逆火大伤害。</li>
 </ul></li>
 </ul>
 <p>滑流的发布很惊艳，但是一发布就有bug：小枪不是飞全屏的，在电脑面前有时会消失，有时会穿过对手，经常打不着！经过修复，远程小枪可以命中了，但是在敌人冲近时的小枪还是会穿过敌人导致被敌人痛揍。虽然手上没有拿刀，拳脚之间却有刀剑的响声，也不知道是怎么抄的代码。</p>
 </div>
 <div id="招牌-35" class="section level4 hasAnchor" number="6.9.1.2">
 <h4><span class="header-section-number">6.9.1.2</span> 招牌<a href="侦查系.html#招牌-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>寻找弱点</strong>：远程攻击和轻攻击有1~50%的概率刷新对方身上的一层减益（哪一层？最快过期的还是最新施加的？）。如果对方身上减益数少于4，则概率提升20%。这个招牌将可以比较好地把减益留在对方身上，提升她S1出修复阻止的概率。</p>
+<p><strong>利用弱点</strong>：远程攻击和轻攻击有1~50%的概率刷新对方身上的一层减益（哪一层？最快过期的还是最新施加的？）。如果对方身上减益数少于4，则概率提升20%。这个招牌将可以比较好地把减益留在对方身上，提升她S1出修复阻止的概率。</p>
 <p>个人感觉，好消息是敌人用不好这个招牌，坏消息是玩家手上也没什么太用处。实测中，就算用觉醒100的滑流，触发出技能白字“寻找弱点”，也不一定刷新！</p>
 </div>
 <div id="协同-35" class="section level4 hasAnchor" number="6.9.1.3">
