--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -208,11 +208,11 @@
 <p>游戏中被动反伤第一人，早期基地防守第一人。早期重击命中高的时候也是玩家手里的红人。之后慢慢被其他战士夺去了风头。</p>
 <div id="能力-19" class="section level4 hasAnchor" number="5.1.1.1">
 <h4><span class="header-section-number">5.1.1.1</span> 能力<a href="战士系.html#能力-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>像一只刺猬一样，挨暴击时高概率施加流血反伤对方。重击造流血，流血可堆积。对方只要用S技，无论命中与否碎骨魔都提升暴击率。三个S技全是各种流血，S2性能最佳。施加流血越多，对方规避能力越差。</p>
+<p>像一只刺猬一样，挨暴击时高概率施加流血反伤对方。重击造流血，流血可堆积。对方只要用S技，无论命中与否碎骨魔都提升暴击率。三个S技（蝎尾痛螫、厌恶、杀无赦！）全是各种流血，S2性能最佳。施加流血越多，对方规避能力越差。</p>
 </div>
 <div id="招牌-18" class="section level4 hasAnchor" number="5.1.1.2">
 <h4><span class="header-section-number">5.1.1.2</span> 招牌<a href="战士系.html#招牌-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>高价值招牌，与流血能力相得益彰，降低对方攻击和能量同时提升自己的。你会发现面对高觉醒碎骨，越打他越打不下血光给他加气，自己不加气还受到流血伤害越高。</p>
+<p><strong>纯粹的恨</strong>：高价值招牌，与流血能力相得益彰，降低对方攻击和能量同时提升自己的。你会发现面对高觉醒碎骨，越打他越打不下血光给他加气，自己不加气还受到流血伤害越高。</p>
 </div>
 <div id="协同-18" class="section level4 hasAnchor" number="5.1.1.3">
 <h4><span class="header-section-number">5.1.1.3</span> 协同<a href="战士系.html#协同-18" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -258,15 +258,14 @@
 <li>吃暴击时概率得到护甲，可以通过重击来刷新护甲时间，但与钢锁的重击刷新相比，略显鸡肋。</li>
 <li>S技：
 <ul>
-<li>雷震的S1是少数几个没有额外效果的特殊技（当然，出暴击还是会概率流血），由于动画效果长，被压到角落里是很难完美闪掉的</li>
-<li>S2和S3差不多，最后一发有概率晕。</li>
+<li>雷震的S1（剑之道）是少数几个没有额外效果的特殊技（当然，出暴击还是会概率流血），由于动画效果长，被压到角落里是很难完美闪掉的</li>
+<li>S2（畸变）和S3（练习射击）差不多，最后一发有概率晕。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-19" class="section level4 hasAnchor" number="5.2.1.2">
 <h4><span class="header-section-number">5.2.1.2</span> 招牌<a href="战士系.html#招牌-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>钢铠法</strong></p>
-<p>雷震暴击率不高的设计也许是为了配合他的招牌：近战打空后为下一次暴击增加暴击伤害。这个招牌再配合剑圣协同，让平时暴击不高的雷震经常冷不丁打出恐怖的暴击伤害秒杀对手（有一个著名玩家的账号就叫“雷震一刀四万七”，可见领悟之深），真是“不是不报，时候未到”。但是近战打空也是有一定风险的。</p>
+<p><strong>钢铠法</strong>：雷震暴击率不高的设计也许是为了配合他的招牌：近战打空后为下一次暴击增加暴击伤害。这个招牌再配合剑圣协同，让平时暴击不高的雷震经常冷不丁打出恐怖的暴击伤害秒杀对手（有一个著名玩家的账号就叫“雷震一刀四万七”，可见领悟之深），真是“不是不报，时候未到”。但是近战打空也是有一定风险的。</p>
 </div>
 <div id="协同-19" class="section level4 hasAnchor" number="5.2.1.3">
 <h4><span class="header-section-number">5.2.1.3</span> 协同<a href="战士系.html#协同-19" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -317,9 +316,9 @@
 </ul></li>
 <li>每次暴击时额外获得一格能量的12%，加上她的近战是7连击，让阿尔茜的气来得特别快。因为这个特性，她S技的暴击也能加气：运气好的时候在S1的过程中打出一两个爆头，不但伤害爆炸，还可能又攒满下一个S1。</li>
 <li>阿尔茜面对<strong>各类</strong>远程攻击拥有天生的规避能力（六阶有23%的概率)，甚至不管她是在变车撞向对手，还是被特殊技打击，只要是远程攻击，她都可能脱身。通天晓的锤子因为要侧闪，阿尔茜也会给你规避掉。当然，如果规避能力被抑制的时候（如黄豹的招牌，热破的减速和探长的精准弹药），阿尔茜是规避不了的。这项能力有时能让玩家受益，但作为电脑对手经常坑远程玩家，例如铁皮一个S2明明连上了，最后一发要抹杀的时候电脑的阿尔茜给你规避掉就呵呵了。然而你用阿尔茜面对铁皮的S2时，她给你规避前一发，后一发你死按着防也会吃下！另外这个能力和“镇静”有点bug，开了镇静精通的人近战打阿尔茜有时自己就会触发霸体。</li>
-<li>大部分角色是S2比较强，阿尔茜则拥有这个游戏中为数不多的优秀S1：一方面她S1中有三发小枪，比起点枪对射中可怜的命中率，这三发小枪连上S1可是妥妥地必中，自然提高了出爆头的概率。而S1之后的小枪不但增伤，还提升射速，阿尔茜“嗖嗖”的小枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了命中率。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂上流血。</li>
-<li>S2在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，虽然出暴击时100%能流血，但是流血的伤害只有69.3%（六阶），而S1的三发子弹只要爆头一发就已经120%的伤害了。所以……偶尔需要用物理攻击的时候（比如对方是幻影，或者有能量抗性模块）可以考虑。</li>
-<li>由于S1优秀S2鸡肋<a href="#fn10" class="footnote-ref" id="fnref10"><sup>10</sup></a>，S3反倒成为了“一不小心涨到两格气又舍不得用S2”的兜底，因为S3前面就有几发小枪可以打爆发，最后的狙击枪100%能施加流血<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a>。</li>
+<li>大部分角色是S2比较强，阿尔茜则拥有这个游戏中为数不多的优秀S1（技巧射击）：一方面她S1中有三发小枪，比起点枪对射中可怜的命中率，这三发小枪连上S1可是妥妥地必中，自然提高了出爆头的概率。而S1之后的小枪不但增伤，还提升射速，阿尔茜“嗖嗖”的小枪有一种“追身”的效果，对方很难侧闪掉连续的两发子弹，这进一步加大了命中率。而且因为卡邦这个游戏的子弹判定“命中”是按判定框来算，所以有时电脑侧闪了也会挂上流血。</li>
+<li>S2（黑寡妇）在杀伤和实用性上比较鸡肋，抽出两把拉风的大刀，其中有一把砍人（另一把难道只是用来平衡双手的？）…难怪伤害也低，虽然出暴击时100%能流血，但是流血的伤害只有69.3%（六阶），而S1的三发子弹只要爆头一发就已经120%的伤害了。所以……偶尔需要用物理攻击的时候（比如对方是幻影，或者有能量抗性模块）可以考虑。</li>
+<li>由于S1优秀S2鸡肋<a href="#fn10" class="footnote-ref" id="fnref10"><sup>10</sup></a>，S3（狙击）反倒成为了“一不小心涨到两格气又舍不得用S2”的兜底，因为S3前面就有几发小枪可以打爆头，最后的狙击枪100%能施加流血<a href="#fn11" class="footnote-ref" id="fnref11"><sup>11</sup></a>。</li>
 </ul>
 <p>虽然阿尔茜是近战型的重击，近战连击也是7连击，但她并不是一个近战型的选手，她所有的近战就是为了给自己加气到S1，再用小枪杀人！</p>
 </div>
@@ -380,15 +379,15 @@
 <li>面对流血对手，漂移自带20%的规避，这让漂移在施加S2和S3之后的安全性也略有提升。在面对配伤害加速器的漂移时，如果没有净化流血的方法，那对面等于额外多了个夜莺。</li>
 <li>漂移的三个S技就是各种流血的混搭，流血的概率不依赖暴击
 <ul>
-<li>S1：80%的概率流血，施加20~40%的流血伤害3秒，最多两层</li>
-<li>S2：最后一下100%施加100%的流血伤害10秒，平时最主要的输出方式，在伤害和流血稳定性上都是最佳的</li>
-<li>S3：前面的旋风刀刃攻击80%的概率流血，施加20~40%的流血伤害3秒，最多两层；最后一把大刀80~100%的概率施加50~100%的流血伤害10秒</li>
+<li>S1（英勇）：80%的概率流血，施加20~40%的流血伤害3秒，最多两层</li>
+<li>S2（训诫）：最后一下100%施加100%的流血伤害10秒，平时最主要的输出方式，在伤害和流血稳定性上都是最佳的</li>
+<li>S3（尊重）：前面的旋风刀刃攻击80%的概率流血，施加20~40%的流血伤害3秒，最多两层；最后一把大刀80~100%的概率施加50~100%的流血伤害10秒</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-21" class="section level4 hasAnchor" number="5.4.1.2">
 <h4><span class="header-section-number">5.4.1.2</span> 招牌<a href="战士系.html#招牌-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间，也就是保持原有的伤害速率的前提下延长时间（总伤害增加）。这让漂移特别适合完美流的玩家。</p>
+<p><strong>高度集中</strong>：如果说漂移平时在流血时间上不如风刃和雷震，觉醒后则补上了这个短板：连击数上了15会提升50~150%的流血时间，也就是保持原有的伤害速率的前提下延长时间（总伤害增加）。这让漂移特别适合完美流的玩家。</p>
 </div>
 <div id="协同-21" class="section level4 hasAnchor" number="5.4.1.3">
 <h4><span class="header-section-number">5.4.1.3</span> 协同<a href="战士系.html#协同-21" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -440,11 +439,11 @@
 </ul></li>
 <li>重击40%概率打晕1.2秒。连击被防打不开局面时，一个重击出晕马上就可以顺利打出一套七连。</li>
 </ul>
-<p>热破的三个S技中，S1没有任何额外效果，S2和S3都是施加减速。在没有觉醒前，S2和S3主要用来控制规避和对方的能量功率。S2是在输出与控制间最划算的特殊技。</p>
+<p>热破的三个S技中，S1（惩罚回旋）没有任何额外效果，S2（时间篡改）和S3（时间泡泡爆破）都是施加减速。在没有觉醒前，S2和S3主要用来控制规避和对方的能量功率。S2是在输出与控制间最划算的特殊技。</p>
 </div>
 <div id="招牌-22" class="section level4 hasAnchor" number="5.5.1.2">
 <h4><span class="header-section-number">5.5.1.2</span> 招牌<a href="战士系.html#招牌-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>加速：觉醒后热破发动S技会提高自身的能量功率（5级67.4，100级120%），觉醒够高的时候，热破在7秒内很可能再次攒出S1，反复循环。而且触发加速还获得30%的远程规避，让热破可以放肆一点冲入近战。盟战（旧地图）中2厅2线配了能量功率模块的高觉醒热破非常难打，就是因为骗完一招又来一招……</p>
+<p><strong>加速</strong>：觉醒后热破发动S技会提高自身的能量功率（5级67.4，100级120%），觉醒够高的时候，热破在7秒内很可能再次攒出S1，反复循环。而且触发加速还获得30%的远程规避，让热破可以放肆一点冲入近战。盟战（旧地图）中2厅2线配了能量功率模块的高觉醒热破非常难打，就是因为骗完一招又来一招……</p>
 </div>
 <div id="协同-22" class="section level4 hasAnchor" number="5.5.1.3">
 <h4><span class="header-section-number">5.5.1.3</span> 协同<a href="战士系.html#协同-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -504,16 +503,16 @@
 <li>重击后获得一个10%的护甲6秒，并有50%概率降低对方暴击抗性20%，持续6秒，进一步提高出暴击的概率。</li>
 <li>特殊技
 <ul>
-<li>S1配地狱弹时100%概率施加8秒强度为60%的燃烧伤害，配精准弹时100%概率施加一个20秒的降暴100%，也就是对手20秒内无法打出暴击。</li>
-<li>S2每一枪50%概率施加流血5秒，最后的手雷50%概率施加燃烧5秒。</li>
-<li>S3获得一个10%的护甲30秒，并降低对方暴击抗性40%。这个效果之前是持续28秒，但因为探长的S3动画很长，浪费了很多时间，后来改成了在S3之后，探长近战打中或者被近战打中对方的时候才开始20秒的倒计时。这同样是鼓励探长待在一边打远程小枪。</li>
+<li>S1（雷声滚滚）配地狱弹时100%概率施加8秒强度为60%的燃烧伤害，配精准弹时100%概率施加一个20秒的降暴100%，也就是对手20秒内无法打出暴击。</li>
+<li>S2（保险栓解除）每一枪50%概率施加流血5秒，最后的手雷50%概率施加燃烧5秒。</li>
+<li>S3（纯汽车人）获得一个10%的护甲30秒，并降低对方暴击抗性40%。这个效果之前是持续28秒，但因为探长的S3动画很长，浪费了很多时间，后来改成了在S3之后，探长近战打中或者被近战打中对方的时候才开始20秒的倒计时。这同样是鼓励探长待在一边打远程小枪。</li>
 </ul></li>
 </ul>
 <p>探长独特的地方在于他远程小枪的输出甚至超过了拳头，这也让他的打法套路异于常人，也许是为了让玩家专注于小枪的命中，游戏给探长配了一个近战重击，操作难度高。小枪的低命中也让他很难快速结束战斗。自身的血量在战士中排名仅次于蝎子，配合护甲buff，有一定的持久性。</p>
 </div>
 <div id="招牌-23" class="section level4 hasAnchor" number="5.6.1.2">
 <h4><span class="header-section-number">5.6.1.2</span> 招牌<a href="战士系.html#招牌-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在远程攻击即将击中时侧闪将触发滚动，并提升远程射速与伤害，持续<del>3秒</del>5秒。搭配“枪手”精通，高觉醒探长出招牌后三发小枪的伤害甚至能比肩S3。但是实际用了用，这个招牌还真的蛮难触发的，早了肯定不行，但一味地等子弹到面前再闪也出不来，这就让行动方式跟平时有点不同。我认为这是练好探长的必由之路，就像练好天火必须学会招架一样。</p>
+<p><strong>战士系芭蕾舞者</strong>：在远程攻击即将击中时侧闪将触发滚动，并提升远程射速与伤害，持续<del>3秒</del>5秒。搭配“枪手”精通，高觉醒探长出招牌后三发小枪的伤害甚至能比肩S3。但是实际用了用，这个招牌还真的蛮难触发的，早了肯定不行，但一味地等子弹到面前再闪也出不来，这就让行动方式跟平时有点不同。我认为这是练好探长的必由之路，就像练好天火必须学会招架一样。</p>
 </div>
 <div id="协同-23" class="section level4 hasAnchor" number="5.6.1.3">
 <h4><span class="header-section-number">5.6.1.3</span> 协同<a href="战士系.html#协同-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -568,13 +567,14 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：每满一格气，获得一层毒液，最大10层。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，如果不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
+<li>S1（目眩和毁坏）和S3（原始兽迫害）施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn12" class="footnote-ref" id="fnref12"><sup>12</sup></a>简直是太爽。</li>
+<li>S2（隧道恐怖）将毒液转化为同能层数的逆火。</li>
 </ul>
 </div>
 <div id="招牌-24" class="section level4 hasAnchor" number="5.7.1.2">
 <h4><span class="header-section-number">5.7.1.2</span> 招牌<a href="战士系.html#招牌-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>身上有毒液充能时，受到普通攻击会回血一定比例，受到的伤害（5级34.6%，满觉醒86%），这可以理解为提升了续航，也可以理解为减少了对方的攻击力。在面对巨蝎对手的时候，要注意使用特殊技杀伤大、有DOT的角色。另外因为防御伤害不回血，所以普攻打在防御的蝎子身上最好打满4下。</p>
+<p><strong>再生毒素</strong>：身上有毒液充能时，受到普通攻击会回血一定比例，受到的伤害（5级34.6%，满觉醒86%），这可以理解为提升了续航，也可以理解为减少了对方的攻击力。在面对巨蝎对手的时候，要注意使用特殊技杀伤大、有DOT的角色。另外因为防御伤害不回血，所以普攻打在防御的蝎子身上最好打满4下。</p>
 <p>觉醒的巨蝎配备科技控制台的时候，由于模块的加持会让巨蝎的回血进一步提升甚至抵消了伤害，这时建议使用黄豹、震荡波这种又可以阻止修复又有DOT的角色，否则真的是几分钟都打不完一局突袭（只有特殊技才能下血）。</p>
 </div>
 <div id="协同-24" class="section level4 hasAnchor" number="5.7.1.3">
@@ -635,17 +635,16 @@
 <li>生命降到10%以下时，亡天尊推开对手并获得2格能量，且10秒内全身起火，对手靠近时会被施加燃烧减益。相比震天尊的不朽遗迹，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望。</li>
 <li>S技：
 <ul>
-<li>S1：60%的概率提升30%的能量功率6秒，消耗10个充能。注意：这个看着是远程，躲法也是远程的S技，可以被近战规避（实测对传奇1的横炮，他出规避的时候连S1，横炮可以连续规避几次加满气还你一个S3！）。并且让人更意外的是，一道道电光居然全是物理攻击，无法让通天晓切换抗性！</li>
-<li>S2：65%的概率提升20%的暴击率12秒，消耗15个充能。也是全物理攻击。</li>
-<li>S3：85%的概率施加40%攻击力的流血7秒，消耗20个充能。</li>
+<li>S1（起起落落）：60%的概率提升30%的能量功率6秒，消耗10个充能。注意：这个看着是远程，躲法也是远程的S技，可以被近战规避（实测对传奇1的横炮，他出规避的时候连S1，横炮可以连续规避几次加满气还你一个S3！）。并且让人更意外的是，一道道电光居然全是物理攻击，无法让通天晓切换抗性！</li>
+<li>S2（两种看法）：65%的概率提升20%的暴击率12秒，消耗15个充能。也是全物理攻击。</li>
+<li>S3（时间的主人）：85%的概率施加40%攻击力的流血7秒，消耗20个充能。</li>
 </ul></li>
 </ul>
 <p>官方在发布后可能是根据玩家的实测和抱怨，对亡灵天尊的数值进行了一定的调整，之后我实测过双满的亡灵天尊，真的感觉是一个纯输出的角色，尤其是出招牌后再来一个S2，确实伤害爆表。在整个相对较弱的战士系中，是可以考虑优先发展的角色。</p>
 </div>
 <div id="招牌-25" class="section level4 hasAnchor" number="5.8.1.2">
 <h4><span class="header-section-number">5.8.1.2</span> 招牌<a href="战士系.html#招牌-25" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>愤怒</strong>：</p>
-<p>最大充能提升到40层。因为上限提升，所以更容易保持在势不可挡的力量状态，加大攻击力。势不可挡的力量激活时，加1.9~80.3%的暴击伤害。</p>
+<p><strong>愤怒</strong>：最大充能提升到40层。因为上限提升，所以更容易保持在势不可挡的力量状态，加大攻击力。势不可挡的力量激活时，加1.9~80.3%的暴击伤害。</p>
 <p>没有太大必要讨论是否要觉醒，因为五星亡灵天尊只能在泰坦币商店买，不能通过开水晶觉醒，所以别犹豫，使用觉醒程序吧。事实上亡灵天尊一半的实力都依赖这个觉醒，因为如果不觉醒，放S技必然切换状态，而高手肯定是愿意一直留在高攻高暴的状态。上限放开之后可以算一算，一般点2枪加5连能得半格气，得到一格气已经19个充能了，攒到S2就38个充能了，就算放S2，也还有23个充能，保持在势不可挡状态。</p>
 </div>
 <div id="协同-25" class="section level4 hasAnchor" number="5.8.1.3">
@@ -707,16 +706,16 @@
 <li>敌人用轻攻击和中攻击打击挽歌，分别有20%和40%的概率<strong>驱散</strong>自己的恐惧。努力进攻才能减少吃流血，经计算，一套MLLLM连击驱散恐惧的概率是81.5%，7连击的角色则有93.4%。</li>
 </ul></li>
 <li>挽歌打击流血状态的对手时，加30%的暴击伤害和10%的能量功率</li>
-<li>S1：打击恐惧状态下的对手，加大伤害</li>
-<li>S2：施加燃烧，对恐惧状态下的对手，燃烧伤害增大，时间延长</li>
-<li>S3：施加恐惧，且30秒内不能被驱散。恐惧时的流血伤害翻倍。</li>
+<li>S1（忧郁导弹）：打击恐惧状态下的对手，加大伤害</li>
+<li>S2（毁灭火箭）：施加燃烧，对恐惧状态下的对手，燃烧伤害增大，时间延长</li>
+<li>S3（无处可逃）：施加恐惧，且30秒内不能被驱散。恐惧时的流血伤害翻倍。</li>
 </ul>
 <p>综合看挽歌的能力设计，主要的理念是让对方在后闪和侧闪中减少攻击力，从而把战斗拖长，让被动施加流血的次数更多，再配合打击流血对手的暴伤和能量功率来提升输出。精通方面，暴伤是必须的，深度创伤也可以考虑。</p>
 <p>然而，如果挽歌给电脑使用，配合厚厚的血槽和各种把战斗拖长的模块，就一定要注意要用带有净化能力的角色来对付他。</p>
 </div>
 <div id="招牌-26" class="section level4 hasAnchor" number="5.9.1.2">
 <h4><span class="header-section-number">5.9.1.2</span> 招牌<a href="战士系.html#招牌-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>处于恐惧状态下的敌人如果近战打空，挽歌将得到5秒的加攻，加攻比例（10-60%）取决于觉醒等级，并且对方驱散恐惧的概率减少10%，直到下一次触发驱散。</p>
+<p><strong>冷酷的嘲弄</strong>：处于恐惧状态下的敌人如果近战打空，挽歌将得到5秒的加攻，加攻比例（10-60%）取决于觉醒等级，并且对方驱散恐惧的概率减少10%，直到下一次触发驱散。</p>
 <p>这个招牌有点像加强版的“反击”精通，由于挽歌大部分时间可以保证施加恐惧，所以这个招牌是被动地提升了挽歌的攻击力，并没有给他带来质变。</p>
 </div>
 <div id="协同-26" class="section level4 hasAnchor" number="5.9.1.3">
