--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -219,15 +219,15 @@
 <li>连击数越多，破甲时间持续越长（每多一连击，破甲时间延长1.5%，与级别无关）。这个技能没有得到什么关注，可能也是因为战擎的短战斗只要攒两个S2就基本上结束了，长战斗时一般都会上S3永久破甲。也许只有在超长的战斗中，这个能力可以扩大永久破甲之上叠加的破甲的时间。</li>
 <li>3个特殊技的斧头攻击都可以触发破甲：
 <ul>
-<li>S1后两下是斧头攻击。并且S1之后还可以获得加攻，牺牲的队友越多，加攻越多。</li>
-<li>S2就是三板斧。输出巨大，短战斗一招制敌。</li>
-<li>S3最后一击必然施加破甲，并且是永久破甲。配合招牌能力大幅度提高输出。</li>
+<li>S1（能量切割）后两下是斧头攻击。并且S1之后还可以获得加攻，牺牲的队友越多，加攻越多。</li>
+<li>S2（斧击）就是三板斧。输出巨大，短战斗一招制敌。</li>
+<li>S3（不计代价）最后一击必然施加破甲，并且是永久破甲。配合招牌能力大幅度提高输出。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌" class="section level4 hasAnchor" number="3.1.1.2">
 <h4><span class="header-section-number">3.1.1.2</span> 招牌<a href="战术系.html#招牌" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>暴击破甲状态下的对手会造成流血，和侦查和战士系不同，战擎是出了暴击就100%流血！事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士。配合S3的永久破甲（俗称脱衣打法），再加深度创伤精通，进一步提高输出。</p>
+<p><strong>突破口</strong>：暴击破甲状态下的对手会造成流血，和侦查和战士系不同，战擎是出了暴击就100%流血！事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士。配合S3的永久破甲（俗称脱衣打法），再加深度创伤精通，进一步提高输出。</p>
 </div>
 <div id="协同" class="section level4 hasAnchor" number="3.1.1.3">
 <h4><span class="header-section-number">3.1.1.3</span> 协同<a href="战术系.html#协同" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -288,8 +288,8 @@
 <li>在自己使用大黄蜂的时候，由于作为玩家并不知道他什么时候会触发规避，只能说规避了是惊喜。并且平时挨打5下等着打回头的习惯不好用了——说不定对方还没打到几下大黄蜂就自己脱身了，这时要尽快反击。</li>
 </ul></li>
 <li>每击倒敌人一次堆积一层永久加攻，上限原为15层，后暗改为20层，第21层开始会有倒计时。</li>
-<li>S1：最初没有额外效果，在8.0中改成每一击有概率施加一层破甲</li>
-<li>S2和S3配有震击，对护甲越高的敌人震击强度越高。S2比S3的效果更好。</li>
+<li>S1（速踢）：最初没有额外效果，在8.0中改成每一击有概率施加一层破甲</li>
+<li>S2（漏洞射击）和S3（炮弹冲击波）配有震击，对护甲越高的敌人震击强度越高。S2比S3的效果更好。</li>
 <li>每个死亡的队友让大黄蜂加攻，所以在推图中，上得越晚越好。</li>
 </ul>
 </div>
@@ -348,14 +348,14 @@
 <li>因为两种抗性是此消彼长的关系，最大总和为10。玩家如果不希望被打，可以通过防御来堆高抗性，也可以通过主动进攻：轻攻击结束连击，加物理减能量抗性，中攻击则加能量减物理抗性。</li>
 </ul></li>
 <li>远程小枪必然驱散攻击buff或者近战buff，虽不像红蜘蛛和犀牛有附加伤害，但面对汽车大师的招牌也是有很好的控制力。</li>
-<li>重击有65%的概率施加燃烧，燃烧的强度不俗（6秒80%攻击，强过钢锁和铁皮的重击），S2的导弹也有概率燃烧。燃烧可叠加。</li>
+<li>重击有65%的概率施加燃烧，燃烧的强度不俗（持续12秒，80%攻击，强过钢锁和爆破铁皮的重击），燃烧可叠加。</li>
 <li>S技是锤子和导弹的表演：
 <ul>
 <li>三个S技中的锤子攻击都可以把对方身上护甲层数等量转化为破甲层数，持续10秒。猩猩队长这种让很多角色很头疼的护甲能力，在通天晓面前是不堪一击的。</li>
 <li>S2和S3的导弹都有65%的概率施加燃烧。</li>
-<li>S1是一锤，在对方没有护甲的情况下也能强制施加一层破甲，持续10秒。</li>
-<li>S2是一锤一炮：75%的护甲穿透，每层物理抗性加5%的近战伤害，每层能量抗性加5%的远程伤害，所以只要两种抗性累计到10层的时候，用S2横竖都是赚。</li>
-<li>S3是一锤多炮送上天。没有任何独特之处的S3。</li>
+<li>S1（搥碎）是一锤，在对方没有护甲的情况下也能强制施加一层破甲，持续10秒。</li>
+<li>S2（我为人人）是一锤一炮：75%的护甲穿透，每层物理抗性加5%的近战伤害，每层能量抗性加5%的远程伤害，所以只要两种抗性累计到10层的时候，用S2横竖都是赚。</li>
+<li>S3（代表作）是一锤多炮送上天。没有任何独特之处的S3。</li>
 </ul></li>
 </ul>
 </div>
@@ -410,14 +410,14 @@
 <h4><span class="header-section-number">3.4.1.1</span> 能力<a href="战术系.html#能力-3" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>驱散：驱散的条件是小枪命中，在这个游戏中小枪的命中率很低，需要更多的耐心。</li>
-<li>S1之后80%概率让远程攻击的射速和伤害的提升，提升射速后小枪的“追身”效果能弥补一定的命中率。</li>
-<li>S2 <del>第二下</del> 两次概率破甲。</li>
-<li>S3能驱散5个对方任意增益（只要增益图标不是白色）</li>
+<li>S1（空中优势组合）之后80%概率让远程攻击的射速和伤害的提升，提升射速后小枪的“追身”效果能弥补一定的命中率。</li>
+<li>S2（狡猾的背叛）两次击打都有概率破甲。</li>
+<li>S3（零射线遗忘）能驱散5个对方任意增益（只要增益图标不是白色）</li>
 </ul>
 </div>
 <div id="nullify" class="section level4 hasAnchor" number="3.4.1.2">
 <h4><span class="header-section-number">3.4.1.2</span> 招牌<a href="战术系.html#nullify" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>红蜘蛛的招牌可以驱散多种buff：</p>
+<p><strong>驱散所有希望</strong>：红蜘蛛的招牌可以驱散多种buff：</p>
 <ul>
 <li>橙色图标的攻击类buff（远程/近战射速或伤害，反射远程）</li>
 <li>紫色图标的能量增加类buff</li>
@@ -472,14 +472,19 @@
 <div id="能力-4" class="section level4 hasAnchor" number="3.5.1.1">
 <h4><span class="header-section-number">3.5.1.1</span> 能力<a href="战术系.html#能力-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>恐龙勇士的破甲与护甲穿透是他主要的输出手段，S1的破甲简单好用，S2提高暴击后进一步提升护甲穿透，S3提高暴击的同时有概率回血，但并不显著。</li>
+<li>恐龙勇士的破甲与护甲穿透是他主要的输出手段：
+<ul>
+<li>S1（三叠纪动荡）破甲简单好用</li>
+<li>S2（侏罗纪主义）提高暴击后进一步提升护甲穿透</li>
+<li>S3（白垩纪大屠杀）提高暴击的同时有概率回血，但并不显著。</li>
+</ul></li>
 <li>恐龙勇士在防御时也能给对方一定的麻烦，无论是直接伤害还是破甲。</li>
 <li>重击暴击时施加流血，在面对纳米千时有一定的破盾能力。</li>
 </ul>
 </div>
 <div id="招牌-3" class="section level4 hasAnchor" number="3.5.1.2">
 <h4><span class="header-section-number">3.5.1.2</span> 招牌<a href="战术系.html#招牌-3" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>破甲后加大对方的防御伤害，并有概率破防，适合压迫式的猛攻。但是貌似有个严重的bug：近战连击破防后连大招很可能被电脑防住。</p>
+<p><strong>适者生存</strong>：破甲后加大对方的防御伤害，并有概率破防，适合压迫式的猛攻。但是貌似有个严重的bug：近战连击破防后连大招很可能被电脑防住。</p>
 </div>
 <div id="协同-4" class="section level4 hasAnchor" number="3.5.1.3">
 <h4><span class="header-section-number">3.5.1.3</span> 协同<a href="战术系.html#协同-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -535,7 +540,7 @@
 <div id="能力-5" class="section level4 hasAnchor" number="3.6.1.1">
 <h4><span class="header-section-number">3.6.1.1</span> 能力<a href="战术系.html#能力-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>S1施加10秒破甲，S2施加10秒减攻，S3施加20秒震击</li>
+<li>S1（能量晶体碰撞）施加10秒破甲，S2（原子弹头）施加10秒减攻，S3（小菜一碟）施加20秒震击</li>
 <li>充能炮（紫炮）：开局后6秒充好给三发紫炮，用完再充。紫炮的飞行速度和伤害提升，但更重要的是下面的技能。</li>
 <li>减益融合：对方身上有减益时（三个特殊技分别对应融合破甲/减攻/震击）如果能用充能炮命中，会让减益变成永不过期，再配合招牌，让战局的天平迅速倒向我方。注意震击还是会被<a href="斗士系.html#beast-purification">动物园</a>、钢锁这些角色净化掉，另两个减益也会被外部过滤器净化掉。</li>
 <li>如果充能炮打完也没融合成功，可以在近战用中等攻击结束一套连击（右滑输入），把刷新未融合的减益过期时间，以便等待充能炮充满。如果眼看就要过期了，可以不打满5连，早点右滑打出中攻击来刷新。</li>
@@ -544,7 +549,7 @@
 </div>
 <div id="招牌-4" class="section level4 hasAnchor" number="3.6.1.2">
 <h4><span class="header-section-number">3.6.1.2</span> 招牌<a href="战术系.html#招牌-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>觉醒后的战威在近战中（打中或者屈防均可）有概率（招牌5级时20%，满招牌时60%）能偷走对方身上的buff，对敌人的多种能力和模块加持均有良好的控制。目前已知能偷到的buff有：</p>
+<p><strong>手段强硬</strong>：觉醒后的战威在近战中（打中或者屈防均可）有概率（招牌5级时20%，满招牌时60%）能偷走对方身上的buff，对敌人的多种能力和模块加持均有良好的控制。目前已知能偷到的buff有：</p>
 <ul>
 <li>橙色图标的攻击类buff（远程/近战射速或伤害，反射远程）：要偷到反射远程需要花一点心思（紫炮打前冲或S技空档完成融合），但这个buff被偷掉就不会再回来了，可以把难打的战斗变成竞技场难度</li>
 <li>紫色图标的能量增加类buff</li>
@@ -612,14 +617,14 @@
 <li>远程攻击打中对方6次，获得15~25%的远程伤害加成5~7秒</li>
 <li>近战攻击打中对方10次，获得15~25%的近战伤害加成5~7秒</li>
 </ul></li>
-<li>S1：100%护甲穿透，直接用来对付斗士很安逸</li>
-<li>S2：除了输出高并无甚亮点。毕竟在玩家使用的时候，特殊技都是在连招中触发的，不用在意最后一击的破防。</li>
-<li>S3：完成后在10秒之内连续发黑暗场，可以霸气外露地借助光圈护体压上去进攻。</li>
+<li>S1（宇宙边缘）：100%护甲穿透，直接用来对付斗士很安逸</li>
+<li>S2（银河枪）：除了输出高并无甚亮点。毕竟在玩家使用的时候，特殊技都是在连招中触发的，不用在意最后一击的破防。</li>
+<li>S3（星际航行）：完成后在10秒之内连续发黑暗场，可以霸气外露地借助光圈护体压上去进攻。</li>
 </ul>
 </div>
 <div id="招牌-5" class="section level4 hasAnchor" number="3.7.1.2">
 <h4><span class="header-section-number">3.7.1.2</span> 招牌<a href="战术系.html#招牌-5" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>线性提高黑暗场的伤害20~120%，属于锦上添花的功能。而在面对高觉醒的狂飙对手，想要无伤真的很难。</p>
+<p><strong>黑暗奴役</strong>：线性提高黑暗场的伤害20~120%，属于锦上添花的功能。而在面对高觉醒的狂飙对手，想要无伤真的很难。</p>
 </div>
 <div id="协同-6" class="section level4 hasAnchor" number="3.7.1.3">
 <h4><span class="header-section-number">3.7.1.3</span> 协同<a href="战术系.html#协同-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -674,14 +679,14 @@
 <li>亚空间脉冲克隆器：对手获得近战或者护甲增益时，黑擎最高有25%的概率将其复制（有效时间与对手相同），每层黑暗能量+5%的概率。</li>
 <li>黑暗能量：黑擎开场后每10秒获得一层黑暗能量，最多10层。半血以下每7秒获得一层，15%血以下5秒。黑暗能力可以提高复制增益的概率、特殊技效果和重击伤害</li>
 <li>重击：驱散对方一层近战加成或护甲加成。每层黑暗能量+5%的重击伤害。</li>
-<li>S1：30%的概率将黑擎身上的减益复制到对手身上，每层黑暗能量+3%的概率。同时获得2层黑暗能量。可惜是“复制”，复制完了自己身上还有，如果是“剪切”就爽了。</li>
-<li>S2：50%的概率驱散对手身上每个近战增益，并施加5%的减攻，持续4秒。每层黑暗能量+5%的概率；50%的概率驱散对手身上每个护甲增益，并施加5%的破甲，持续4秒（经测试，对方没有护甲时也不会施加破甲）。每层黑暗能量+5%的概率。另外：每驱散一个增益，要消耗三层黑暗能量。</li>
-<li>S3：消耗所有黑暗能量。攻击结束后7秒内普攻破防，每层黑暗能量+0.5秒破防时间。</li>
+<li>S1（黑暗能量晶体切割）：30%的概率将黑擎身上的减益复制到对手身上，每层黑暗能量+3%的概率。同时获得2层黑暗能量。可惜是“复制”，复制完了自己身上还有，如果是“剪切”就爽了。</li>
+<li>S2（邪恶之斧）：50%的概率驱散对手身上每个近战增益，并施加5%的减攻，持续4秒。每层黑暗能量+5%的概率；50%的概率驱散对手身上每个护甲增益，并施加5%的破甲，持续4秒（经测试，对方没有护甲时也不会施加破甲）。每层黑暗能量+5%的概率。另外：每驱散一个增益，要消耗三层黑暗能量。</li>
+<li>S3（不避艰险）：消耗所有黑暗能量。攻击结束后7秒内普攻破防，每层黑暗能量+0.5秒破防时间。</li>
 </ul>
 </div>
 <div id="招牌-6" class="section level4 hasAnchor" number="3.8.1.2">
 <h4><span class="header-section-number">3.8.1.2</span> 招牌<a href="战术系.html#招牌-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>用特殊技伤害的15~25%给自己回血。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。练黑擎的玩家可以放心地喂战术招牌。</p>
+<p><strong>人工矩阵</strong>：用特殊技伤害的15~25%给自己回血。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。练黑擎的玩家可以放心地喂战术招牌。</p>
 </div>
 <div id="协同-7" class="section level4 hasAnchor" number="3.8.1.3">
 <h4><span class="header-section-number">3.8.1.3</span> 协同<a href="战术系.html#协同-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -738,9 +743,9 @@
 <li>被击倒时，有概率在3秒内修复受到伤害的13~20%，概率为失去的血量百分比乘以0.6%（即半血时概率30%）。这一点对玩家只能说是心理安慰，对付电脑补天士则要注意低血时少击倒他，或者确认能结束战斗时再放S技。</li>
 <li>三个S技全是学自斗士系角色（分别是碾碎器，汽车大师和斗擎），作为领导模块持有者居然用蹬踏、头槌这些动作是不是太丢份了……网友笑称这是一位披着战术系外衣的斗士饿鲨（这一点在后面的故事中居然也有印证，见下图）。
 <ul>
-<li>S1：发动时移除对方的霸体，50%的概率驱散对方一个增益。如果S1结束后对方身上仍然有增益，补天士获得5%的物理抗性8秒，最多可叠加4层。不过我想不出怎样在8秒完成四次S1，可能指的是最多利用对方四个增益，生成四个物理抗性。不过这个移除霸体的功能实在太鸡肋了，面对带着霸体的敌人，普通拳脚是无效的，补天士只能裸放S1来移除，但裸放会给自己造成相当大的破绽。</li>
-<li>S2：100%概率驱散一个近战增益和一个护甲增益。如果补天士血量低于20%，在3秒内回血5%。</li>
-<li>S3：100%护甲穿透。如果补天士血量低于10%，在3秒内回血10%。只能说，S2和S3的回血来得有点晚，有点绝地苟活的意思，可能也是这了搭配招牌。</li>
+<li>S1（敢于相信）：发动时移除对方的霸体，50%的概率驱散对方一个增益。如果S1结束后对方身上仍然有增益，补天士获得5%的物理抗性8秒，最多可叠加4层。不过我想不出怎样在8秒完成四次S1，可能指的是最多利用对方四个增益，生成四个物理抗性。不过这个移除霸体的功能实在太鸡肋了，面对带着霸体的敌人，普通拳脚是无效的，补天士只能裸放S1来移除，但裸放会给自己造成相当大的破绽。</li>
+<li>S2（表明立场）：100%概率驱散一个近战增益和一个护甲增益。如果补天士血量低于20%，在3秒内回血5%。</li>
+<li>S3（心中的火）：100%护甲穿透。如果补天士血量低于10%，在3秒内回血10%。只能说，S2和S3的回血来得有点晚，有点绝地苟活的意思，可能也是为了搭配招牌。</li>
 </ul></li>
 </ul>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-12"></span>
@@ -753,7 +758,7 @@ Figure 3.1: 斗士饿鲨说自己要成为“鲨天士”！
 <div id="招牌-7" class="section level4 hasAnchor" number="3.9.1.2">
 <h4><span class="header-section-number">3.9.1.2</span> 招牌<a href="战术系.html#招牌-7" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><strong>补天士崛起</strong>：补天士每失去10%的血量就提升5~15%的攻击力。面对故事和特殊任务的Boss时翻倍。这招牌有点汽车大师的味道（又是学斗士的），吃程序。</p>
-<p><strong>自发布至今，这个招牌依然根本不起作用，血量再低，攻击也没有提高。唯一的提高还是来自勇气精通。</strong></p>
+<p><strong>Bug：自发布至关服，这个招牌依然根本不起作用，血量再低，攻击也没有提高。</strong></p>
 </div>
 <div id="协同-8" class="section level4 hasAnchor" number="3.9.1.3">
 <h4><span class="header-section-number">3.9.1.3</span> 协同<a href="战术系.html#协同-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -805,16 +810,15 @@ Figure 3.1: 斗士饿鲨说自己要成为“鲨天士”！
 <li>所有特殊攻击：结束特殊攻击时，如果连击槽是偶数，得到12~25%的加攻10秒；如果是奇数，对方得到-15~30%的减攻10秒。<strong>学霸专用人物警告</strong>：一边打一边要算数，让音板的使用有了不小的挑战。音板的<strong>S1是2下，S2是4下，S3是5下</strong>，一般来说玩家肯定是希望自身得到加攻，于是就要凑偶数，从而早点结束近战连击，而不是回回都打满5连。实战中没那么难，只要你不是放S3，那就盯着连击槽变成偶数时放S1或S2。真到了S3，那就什么时候凑成了奇数什么时候裸放就行。</li>
 <li>S技：
 <ul>
-<li>S1：80%的概率施加10~20%的破甲8秒，连击槽每20点加10%的伤害。动作是全新设计，和G1铁皮一样也是一脚查水表的动作，有点搞笑。并且跟G1铁皮的S2一样，中了还可以闪第二下。</li>
-<li>S2：施加120%攻击力的震击3秒。连击槽每10点加1秒震击。动作是录音机的S2，只是红色的脉冲波颜色很暗，没有录音机那么拉风。</li>
-<li>S3：45秒内，敌人增益的持续时间减少50%。每一击有5%的概率施加破甲20秒，连击槽每1点加1%的概率。在连击槽高了之后，S3施加5层破甲非常容易。动画和声波的S3一模一样。</li>
+<li>S1（那个兆赫！）：80%的概率施加10~20%的破甲8秒，连击槽每20点加10%的伤害。动作是全新设计，和G1铁皮一样也是一脚查水表的动作，有点搞笑。并且跟G1铁皮的S2一样，中了还可以闪第二下。</li>
+<li>S2（反吠）：施加120%攻击力的震击3秒。连击槽每10点加1秒震击。动作是录音机的S2，只是红色的脉冲波颜色很暗，没有录音机那么拉风。</li>
+<li>S3（致命反馈）：45秒内，敌人增益的持续时间减少50%。每一击有5%的概率施加破甲20秒，连击槽每1点加1%的概率。在连击槽高了之后，S3施加5层破甲非常容易。动画和声波的S3一模一样。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-8" class="section level4 hasAnchor" number="3.10.1.2">
 <h4><span class="header-section-number">3.10.1.2</span> 招牌<a href="战术系.html#招牌-8" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>信号扰乱</strong>：</p>
-<p>远程攻击减少对方增益的触发率2~50%，最大一层。看着觉得鸡肋，但考虑到音板的重击命中率，还是有一定作用的。</p>
+<p><strong>信号扰乱</strong>：远程攻击减少对方增益的触发率2~50%，最大一层。看着觉得鸡肋，但考虑到音板的重击命中率，还是有一定作用的。</p>
 </div>
 <div id="协同-9" class="section level4 hasAnchor" number="3.10.1.3">
 <h4><span class="header-section-number">3.10.1.3</span> 协同<a href="战术系.html#协同-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
