--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -214,9 +214,9 @@
 <li>自身遭受流血的时候可以把输出伤害的最多31.5%变成自己的血，超过一层的流血马上会净化掉换成10%的能量。这让斗擎在打碎骨的时候丝毫不担心吃反伤。</li>
 <li>S技中所有出刀的动作都有60%的概率施加3秒40%的流血
 <ul>
-<li>S1是为数不多的只打一下的特殊技，但正因为所有的伤害都集中在这一下，并且血越少杀伤越大（最高加150%的伤害），所以在残血时这是斗擎最主要的输出手段，无论有没有激活招牌。</li>
-<li>S2除了杀伤力巨大，额外加30%的流血概率</li>
-<li>S3基本上就是弱化的S2，因为没有额外的效果，甚至在人物信息中没有列出，也没有任何应用的场合。</li>
+<li>S1（守护者猛击）是为数不多的只打一下的特殊技，但正因为所有的伤害都集中在这一下，并且血越少杀伤越大（最高加150%的伤害），所以在残血时这是斗擎最主要的输出手段，无论有没有激活招牌。</li>
+<li>S2（我会把你们统统消灭！）除了杀伤力巨大，额外加30%的流血概率</li>
+<li>S3（汽车人的力量）基本上就是弱化的S2，因为没有额外的效果，甚至在人物信息中没有列出，也没有任何应用的场合。</li>
 </ul></li>
 </ul>
 </div>
@@ -275,9 +275,9 @@
 <li>导弹攻击（重击和S3中）在暴击时必然施加燃烧。</li>
 <li>三招S技经过调整有了比较好的控制能力，更好地配合他的招牌
 <ul>
-<li>S1：施加一层暴击机率减益，35%的概率锁6秒S2，75%的概率锁6秒S3</li>
-<li>S2：50%的概率锁6秒S3，对方能量越多，S2砍的伤害越大</li>
-<li>S3：导弹攻击加50%的概率，100%的概率锁10秒S2和S3。并施加一层永久降暴16%（可以叠加三层）</li>
+<li>S1（物理治疗）：施加一层暴击机率减益，35%的概率锁6秒S2，75%的概率锁6秒S3</li>
+<li>S2（愤怒旋转）：50%的概率锁6秒S3，对方能量越多，S2砍的伤害越大</li>
+<li>S3（俯冲）：导弹攻击加50%的概率，100%的概率锁10秒S2和S3。并施加一层永久降暴16%（可以叠加三层）</li>
 </ul></li>
 </ul>
 </div>
@@ -333,14 +333,14 @@
 <ul>
 <li>前冲时的不可阻挡，令其在打法上极具侵略性。早期的汽车大师前冲都不可阻挡时间长，即使被侧闪也不会马上遭到反击，后来官方对此进行了削弱，使得面对电脑操作的汽车大师，侧闪反击套路更容易。这项调整对玩家的汽车大师也有一定的影响：重击撞倒后前冲压起身不像其他角色那么灵，电脑很容易闪开。</li>
 <li>重击会随机施加一种减益（破甲、降能量功率、减攻），能进一步扩大汽车大师在战斗中的优势。</li>
-<li>S1是游戏中少数几个只有输出没有效果的特殊技，所以除了有时在需要能量型攻击的场合打打输出，基本上无用。</li>
-<li>S2之后长时间的霸体可以对对方形成极大的威慑力，杀伤也很高。</li>
-<li>S3虽然杀伤力极大并且施加6个减益，但由于自身也扣血，所以不推荐使用。</li>
+<li>S1（离子刀）是游戏中少数几个只有输出没有效果的特殊技，所以除了有时在需要能量型攻击的场合打打输出，基本上无用。</li>
+<li>S2（大师工艺）之后长时间的霸体可以对对方形成极大的威慑力，杀伤也很高。</li>
+<li>S3（路的尽头）虽然杀伤力极大并且施加6个减益，但由于自身也扣血，所以不推荐使用。</li>
 </ul>
 </div>
 <div id="招牌-11" class="section level4 hasAnchor" number="4.3.1.2">
 <h4><span class="header-section-number">4.3.1.2</span> 招牌<a href="斗士系.html#招牌-11" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>汽车大师的招牌技能让其血量越低攻击提升越大，在盟战中高觉醒的汽车大师只要吃一个单体复活，就能打出极高的伤害，非常划算。</p>
+<p><strong>公路之王</strong>：汽车大师的招牌技能让其血量越低攻击提升越大，在盟战中高觉醒的汽车大师只要吃一个单体复活，就能打出极高的伤害，非常划算。</p>
 </div>
 <div id="协同-12" class="section level4 hasAnchor" number="4.3.1.3">
 <h4><span class="header-section-number">4.3.1.3</span> 协同<a href="斗士系.html#协同-12" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -395,9 +395,9 @@
 <li>重击时会出霸体，重击命中有40~63%的概率施加燃烧，40~50%的伤害，持续2秒</li>
 <li>钢锁是唯一一位每个S技都变形的机器人<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>，三招S技都会获得一层攻击加成：
 <ul>
-<li>S1：100%施加燃烧</li>
-<li>S2：获得攻击加成</li>
-<li>S3：100%施加燃烧并获得攻击加成</li>
+<li>S1（恐龙战队）：100%施加燃烧</li>
+<li>S2（震颤）：获得攻击加成</li>
+<li>S3（国王！）：100%施加燃烧并获得攻击加成</li>
 </ul></li>
 <li>钢锁之前的能力描述中有提到变成龙形时不受任何伤害，后来不知道何时省去了这段描述。事实上用重击去怼对方的子弹或者S技确实是不受伤害，但顶着逆火放S技还是会吃伤害。</li>
 </ul>
@@ -471,16 +471,16 @@
 <li>猩猩的重击是一种神奇的存在：不会被声波反弹，会触发碎骨魔被动流血，像近战；但是又会被阿尔茜规避掉，像远程。</li>
 <li>三个S技各有各的作用：
 <ul>
-<li>S1拥有复仇式的流血能力，没有吃到流血时就没有必要使用了</li>
-<li>S2是主要的进攻手段，每次刀刃进攻有概率流血，但是要注意S2有可能在连招中连不上</li>
-<li>S3得到10层护甲，对对手施加长时减攻，适合长战斗</li>
+<li>S1（丛林的法则）拥有复仇式的流血能力，没有吃到流血时就没有必要使用了</li>
+<li>S2（野兽勇士）是主要的进攻手段，每次刀刃进攻有概率流血，但是要注意S2有可能在连招中连不上</li>
+<li>S3（大猩猩的战争）得到10层护甲，对对手施加长时减攻，适合长战斗</li>
 </ul></li>
 <li>除了牺牲护甲可以加攻，在对手防御近战普攻时也会30%概率获得加攻（10~18%），可多层。所以猩猩在屈防对手时一定多打几下，而不要急于放重击。</li>
 </ul>
 </div>
 <div id="招牌-13" class="section level4 hasAnchor" number="4.5.1.2">
 <h4><span class="header-section-number">4.5.1.2</span> 招牌<a href="斗士系.html#招牌-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>招牌是根据自己身上护甲的数目，加速DOT的过期。并且每过期一个流血减益，就进行一定程度的自我修复（无需身上有护甲，所以这一点反克了觉醒战擎的脱衣打法）。流血类机器人面对高觉醒的猩猩，经常会有越打血越多的痛苦。因为回血只针对流血DOT，对玩家来说，只要组野兽净化对，就不需要特别在意猩猩是否觉醒。</p>
+<p><strong>猩猩队长赛高</strong>：招牌是根据自己身上护甲的数目，加速DOT的过期。并且每过期一个流血减益，就进行一定程度的自我修复（无需身上有护甲，所以这一点反克了觉醒战擎的脱衣打法）。流血类机器人面对高觉醒的猩猩，经常会有越打血越多的痛苦。因为回血只针对流血DOT，对玩家来说，只要组野兽净化对，就不需要特别在意猩猩是否觉醒。</p>
 </div>
 <div id="beast-purification" class="section level4 hasAnchor" number="4.5.1.3">
 <h4><span class="header-section-number">4.5.1.3</span> 协同<a href="斗士系.html#beast-purification" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -526,16 +526,15 @@
 <li>重击时，每层加攻加2%的概率打晕2秒。野牛的重击和别人不太一样，半屏的电光，又可以侧闪又可以后闪，看似鸡肋，其实对野牛的前冲有很大的帮助。</li>
 <li>S技：
 <ul>
-<li>S1很鸡肋，如果没有堆到足够的加攻，全程喷火都不一定出燃烧，这喷火器是马戏团的吗？</li>
-<li>S2虽然输出大，但是不可防御的属性对玩家意义不大，主要看是否打晕，眩晕概率同样取决于加攻的层数</li>
-<li>S3真的是伤害巨大，打完还得三个加攻（觉醒则自动出招牌）和8.5秒霸体。</li>
+<li>S1（喷火器）很鸡肋，如果没有堆到足够的加攻，全程喷火都不一定出燃烧，这喷火器是马戏团的吗？</li>
+<li>S2（电能剑）虽然输出大，但是不可防御的属性对玩家意义不大，主要看是否打晕，眩晕概率同样取决于加攻的层数</li>
+<li>S3（横冲直撞）真的是伤害巨大，打完还得三个加攻（觉醒则自动出招牌）和8.5秒霸体。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-14" class="section level4 hasAnchor" number="4.6.1.2">
 <h4><span class="header-section-number">4.6.1.2</span> 招牌<a href="斗士系.html#招牌-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>狂暴</strong>：</p>
-<p>每获得三个加攻，进入6秒的狂暴状态，提升暴击率（与招牌等级相关），并且普通攻击有20%概率破防，出招牌期间还净化伤害减益并且免疫伤害减益。野牛本来就不太好用，而他对这个招牌的依赖度几乎是100%，如果不觉醒，根本没法上场。</p>
+<p><strong>狂暴</strong>：每获得三个加攻，进入6秒的狂暴状态，提升暴击率（与招牌等级相关），并且普通攻击有20%概率破防，出招牌期间还净化伤害减益并且免疫伤害减益。野牛本来就不太好用，而他对这个招牌的依赖度几乎是100%，如果不觉醒，根本没法上场。</p>
 </div>
 <div id="协同-14" class="section level4 hasAnchor" number="4.6.1.3">
 <h4><span class="header-section-number">4.6.1.3</span> 协同<a href="斗士系.html#协同-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -598,13 +597,14 @@
 </ul>
 <p>三个S技的动作与红蜘蛛完全相同，但效果差别巨大：</p>
 <ul>
-<li>S1：第一拳命中后刷新所有近战增益，后续每一发射击命中获得一层10%的近战加成2秒。</li>
-<li>S2：命中刷新所有近战增益。每层增益+2%伤害。</li>
-<li>S3：施加相当于攻击力60~100%的震击6秒。惊天雷身上每层增益+2%震击伤害。敌人身上每层增益+5%震击伤害。</li>
+<li>S1（自卑赔偿）：第一拳命中后刷新所有近战增益，后续每一发射击命中获得一层10%的近战加成2秒。</li>
+<li>S2（残酷的背叛）：命中刷新所有近战增益。每层增益+2%伤害。</li>
+<li>S3（令人震惊的遗忘）：施加相当于攻击力60~100%的震击6秒。惊天雷身上每层增益+2%震击伤害。敌人身上每层增益+5%震击伤害。</li>
 </ul>
 </div>
 <div id="招牌-15" class="section level4 hasAnchor" number="4.7.1.2">
 <h4><span class="header-section-number">4.7.1.2</span> 招牌<a href="斗士系.html#招牌-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p><strong>上升</strong>：</p>
 <ul>
 <li>在身上没有减益时近战攻击每击中5次获得5~20%的近战加成7秒。</li>
 <li>近战攻击有概率净化任何减益（每一级招牌增加0.2%的概率），这补充了惊天雷重击不能净化酸液的不足</li>
@@ -669,14 +669,14 @@
 </ul>
 <p>作为斗士，护甲让铁皮自身的坦度提升不少。而铁皮对护甲的运用则额外给了他加攻、净化和击晕的多元化能力。要对付电脑的铁皮，破甲依然是关键，而且电脑越挨打护甲层数越多，没有通天晓这样一破到底的还真难保证输出。</p>
 <ul>
-<li>S1：获得20-35%的近战增益，持续8秒。</li>
-<li>S2：连放三炮，前两炮有点像警车的散弹枪（但是实测并没有警车那种飞全屏的射程），然后出7秒霸体（<strong>注意：没打中是不会出霸体的，所以对玩家是个利好</strong>）。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。这个技能有个bug，就算被前两炮打中，依然还可以闪掉第三炮，看来从漫威游戏中抄来的代码也不太好用啊。好在电脑会乖乖地吃第三炮。</li>
-<li>S3：同救护车S3动画。刷新所有护甲，并且在剩余战斗中降低对方减益效果10%，可以堆4层。目前想不出有什么特别合适的应用场合。</li>
+<li>S1（损伤）：获得20-35%的近战增益，持续8秒。</li>
+<li>S2（手里枪）：连放三炮，前两炮有点像警车的散弹枪（但是实测并没有警车那种飞全屏的射程），然后出7秒霸体（<strong>注意：没打中是不会出霸体的，所以对玩家是个利好</strong>）。霸体结束后获得三层护甲，持续10秒。比汽车大师那种一抬脚就出霸体浪费时间要实用很多。这个技能有个bug，就算被前两炮打中，依然还可以闪掉第三炮，看来从漫威游戏中抄来的代码也不太好用啊。好在电脑会乖乖地吃第三炮。</li>
+<li>S3（走开）：同救护车S3动画。刷新所有护甲，并且在剩余战斗中降低对方减益效果10%，可以堆4层。目前想不出有什么特别合适的应用场合。</li>
 </ul>
 </div>
 <div id="招牌-16" class="section level4 hasAnchor" number="4.8.1.2">
 <h4><span class="header-section-number">4.8.1.2</span> 招牌<a href="斗士系.html#招牌-16" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。</p>
+<p><strong>三乙基身体</strong>：在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。</p>
 <p>从设计上看这是又一个电脑受益巨大，玩家基本上用不到的招牌，毕竟1、玩家要高觉醒不容易；2、玩家不希望挨打；3、谁愿意到了3个血量档位还主动挨打？</p>
 <p>有人也许会说，这种招牌是不是可以让电脑因为怕反伤而手下留情，从而起到保命的作用？事实上在铁皮月的展示任务最后一周，我体验了一下满觉醒的铁皮，发现电脑才不管你有没有出招牌，就算反伤到死，也根本不会停手！</p>
 <p>而电脑一旦高觉醒……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>。</p>
@@ -738,15 +738,15 @@
 </ul></li>
 <li>S技：
 <ul>
-<li>S1：如果在整洁状态，就得到污损状态的增益4秒，如果在污损状态，最后一击不可防御。如果不在这两种状态，就同时得到这两种状态的增益4秒。这招的动作很像侍魂中的牙神幻十郎，十分帅气，可惜没有配刀光特效，但更可惜的是一发布就带着bug：<strong>第二斩基本上砍不到人，从而留下巨大的破绽给对方</strong>。这让S1几乎没了用武之地。</li>
-<li>S2：如果在整洁状态，最后一击不可防御；如果在污损状态，就得到整洁状态的增益6秒。如果不在这两种状态，就同时得到这两种状态的增益6秒。</li>
-<li>S3：同时得到两种状态的增益6秒。</li>
+<li>S1（别打脸）：如果在整洁状态，就得到污损状态的增益4秒，如果在污损状态，最后一击不可防御。如果不在这两种状态，就同时得到这两种状态的增益4秒。这招的动作很像侍魂中的牙神幻十郎，十分帅气，可惜没有配刀光特效，但更可惜的是一发布就带着bug：<strong>第二斩基本上砍不到人，从而留下巨大的破绽给对方</strong>。经过网友反复测试，需要“延时发动S技”,v即在连击最后一下结束时多等一瞬间再按下S技，方可连上。</li>
+<li>S2（刚被镀铬）：如果在整洁状态，最后一击不可防御；如果在污损状态，就得到整洁状态的增益6秒。如果不在这两种状态，就同时得到这两种状态的增益6秒。</li>
+<li>S3（华丽攻击）：同时得到两种状态的增益6秒。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-17" class="section level4 hasAnchor" number="4.9.1.2">
 <h4><span class="header-section-number">4.9.1.2</span> 招牌<a href="斗士系.html#招牌-17" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>招牌：每当身上有一个近战或者护甲增益过期，有10~60%的概率获得一个永久的10%的对应增益，最大堆积10层。</p>
+<p><strong>超模</strong>：每当身上有一个近战或者护甲增益过期，有10~60%的概率获得一个永久的10%的对应增益，最大堆积10层。</p>
 <p>这个招牌设计得还是与飞毛腿的能力比较匹配的，只是：1、是概率性的，没法强求；2、需要较长的战斗时间才能逐步发挥出来。</p>
 </div>
 <div id="协同-17" class="section level4 hasAnchor" number="4.9.1.3">
