--- a/chars_book/科技系.html
+++ b/chars_book/科技系.html
@@ -212,14 +212,14 @@
 <li>自我诊断少于半血时，完成一次重击（没撞倒不要紧，但是中途不能被打断）就开始回血，达到半血时停止，回血过程还给自己加气，以便达到S2进一步回血</li>
 <li>远程攻击有20%的暴击加成，暴击将施加震击。这对救护车的输出做了一定程度的补充。</li>
 <li>在暴击命中的时候每层震击都有15%的概率打晕1.5秒</li>
-<li>S1有40%的概率晕2.5秒，每层震击加20%的概率，换句话说3层震击就必晕。S1平时是救护车主要的输出手段，发现打晕时狂点枪可以打满5发搏到更多都震击，再前冲一套内如果打出第二个S1几乎是必晕，再循环……主要的问题是怕打红，这时还是需要高等级的抑制器精通才能起到作用，实在快红也就不要上去近战了，开始骗招吧。</li>
-<li>S2大幅度回血并且加气，损失的生命值越多给自己加气越多。所以救护车就靠着自我诊断和S2，可以很容易从濒死状态顽强地把生命加回来。</li>
-<li>S3输出比较可观并提升暴击率。不过平时用的较少。</li>
+<li>S1（拧紧扳手）有40%的概率晕2.5秒，每层震击加20%的概率，换句话说3层震击就必晕。S1平时是救护车主要的输出手段，发现打晕时狂点枪可以打满5发搏到更多都震击，再前冲一套内如果打出第二个S1几乎是必晕，再循环……主要的问题是怕打红，这时还是需要高等级的抑制器精通才能起到作用，实在快红也就不要上去近战了，开始骗招吧。</li>
+<li>S2（紧急响应）大幅度回血并且加气，损失的生命值越多给自己加气越多。所以救护车就靠着自我诊断和S2，可以很容易从濒死状态顽强地把生命加回来。</li>
+<li>S3（诊断扫描）输出比较可观并提升暴击率。不过平时用的较少。</li>
 </ul>
 </div>
 <div id="招牌-36" class="section level4 hasAnchor" number="7.1.1.2">
 <h4><span class="header-section-number">7.1.1.2</span> 招牌<a href="科技系.html#招牌-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>紧急修复：敌方单次伤害超过攻击力的120%时概率触发，在4秒内恢复收到的伤害。这个招牌有效的防止了救护车短时间受到高伤害被秒杀，不过初始概率不高，觉醒高了以后还是能让他越来越顽强的。</p>
+<p><strong>紧急修复</strong>：敌方单次伤害超过攻击力的120%时概率触发，在4秒内恢复收到的伤害。这个招牌有效的防止了救护车短时间受到高伤害被秒杀，不过初始概率不高，觉醒高了以后还是能让他越来越顽强的。</p>
 </div>
 <div id="协同-36" class="section level4 hasAnchor" number="7.1.1.3">
 <h4><span class="header-section-number">7.1.1.3</span> 协同<a href="科技系.html#协同-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -266,16 +266,16 @@
 <li>幻影的远程小枪100%护甲穿透，这让他的枪命中时跟拳头的伤害有一拼，防御伤害也略高于常人，觉醒后配合S1的射速提升，让幻影在远程战中颇有优势。</li>
 <li>幻影的3个S技各具特色，演化出三种不同的打法，可根据战况灵活切换。
 <ul>
-<li>S1：发动后进入干扰模式。远程攻击60%的概率减气，由于命中或被防都会减，这让幻影有不错的控气能力。</li>
-<li>S2：发动后进入失能模式。每次近战攻击施加一层长时间减攻（最高15层，5阶的幻影15层可以减攻71.25%，长达20秒，可谓阉割模式），每施加到7层还晕1.5秒，这让幻影可以连打三个近战7连（注意，1.5秒的晕是来不及后撤再开枪的，如果想要，可以考虑把“昏迷”精通升高一些）。三套7连打完肯定又攒到一个S1，S1最后一发如果能搏到减气，就算连晕打红也不怕。另外只要维持在失能模式，减攻过期后又可以接着晕。</li>
-<li>S3：发动后进入灵巧模式。每躲闪对方的攻击会叠加一层15%的永久加攻，最大20层，之后第21层会过期。前期幻影需要很近距离躲闪近战才加攻，后来暗改为闪避任何攻击都加攻，而且闪避的条件也比探长招牌或者横炮的加气要宽松一些，这让幻影可以有效地弥补自己输出低的不足。</li>
+<li>S1（抢跑）：发动后进入干扰模式。远程攻击60%的概率减气，由于命中或被防都会减，这让幻影有不错的控气能力。</li>
+<li>S2（掌法和拳法）：发动后进入失能模式。每次近战攻击施加一层长时间减攻（最高15层，5阶的幻影15层可以减攻71.25%，长达20秒，可谓阉割模式），每施加到7层还晕1.5秒，这让幻影可以连打三个近战7连（注意，1.5秒的晕是来不及后撤再开枪的，如果想要，可以考虑把“昏迷”精通升高一些）。三套7连打完肯定又攒到一个S1，S1最后一发如果能搏到减气，就算连晕打红也不怕。另外只要维持在失能模式，减攻过期后又可以接着晕。</li>
+<li>S3（借口）：发动后进入灵巧模式。每躲闪对方的攻击会叠加一层15%的永久加攻，最大20层，之后第21层会过期。前期幻影需要很近距离躲闪近战才加攻，后来暗改为闪避任何攻击都加攻，而且闪避的条件也比探长招牌或者横炮的加气要宽松一些，这让幻影可以有效地弥补自己输出低的不足。</li>
 <li>在上述三个模式中被电脑打中就可能会回到能量模式，失去控气/减攻/堆加攻的能力直到再次发动S技，已获得的加攻不会丢失。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-37" class="section level4 hasAnchor" number="7.2.1.2">
 <h4><span class="header-section-number">7.2.1.2</span> 招牌<a href="科技系.html#招牌-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>进一步提升三个S技的效果N秒。S1提射速，S2近战攻击破防，S3加90%攻击。如果只是刚觉醒，时间非常短（5级3.3秒，连S3都只能前两拳获得加成，S2马上前冲追打近战都来不及），觉醒高后才逐步发挥效力。尤其S1出来后长时间小枪追身，非常伤人。</p>
+<p><strong>K.E.R.S</strong>：进一步提升三个S技的效果N秒。S1提射速，S2近战攻击破防，S3加90%攻击。如果只是刚觉醒，时间非常短（5级3.3秒，连S3都只能前两拳获得加成，S2马上前冲追打近战都来不及），觉醒高后才逐步发挥效力。尤其S1出来后长时间小枪追身，非常伤人。</p>
 <p>招牌获益最大的应该是S2，破防性能让幻影可以安逸地打出两连晕和S1收尾。</p>
 </div>
 <div id="协同-37" class="section level4 hasAnchor" number="7.2.1.3">
@@ -338,16 +338,15 @@
 <li>重击有90%的概率（五星犀牛概率为100%）进行能量锁定4秒，并扣减对方最大能量的12%，这让犀牛可以有效地解除对方的“红气警报”，且有一段时间不怕对方涨气，在面对机器人资源模块上的震天尊时尤其关键。重击命中一次后，锁气的概率减少70%，16秒后才恢复之前的概率。犀牛重击的回弹破绽大，容易被人从天上打下来。</li>
 <li>S技：
 <ul>
-<li>S1有90%的概率驱散1层近战/远程/特殊加成。注意不是三选一，而是只要有某种就驱散一层。例如可以同时驱散掉觉醒机器人资源的特殊伤害和“勇气”精通的加攻。很多人偏好犀牛的S2，但在对方身上有这类Buff时，用S1更好，因为驱散造成最多长达13秒的流血时间可以让犀牛的近战伤害更大。</li>
-<li>S2是比较主要的输出方式，尤其在面对护甲和抗性的时候可以有效地穿透。</li>
-<li>S3除了施加流血，还根据对方剩余血量的多少提升伤害。不过90%以上加55%的伤害，75%以上加25%，这只有在面对强敌时才有意义，平时短战斗如果都到3格气了还没打掉敌人10%的血也太失败了。</li>
+<li>S1（戈尔战术）有90%的概率驱散1层近战/远程/特殊加成。注意不是三选一，而是只要有某种就驱散一层。例如可以同时驱散掉觉醒机器人资源的特殊伤害和“勇气”精通的加攻。很多人偏好犀牛的S2，但在对方身上有这类Buff时，用S1更好，因为驱散造成最多长达13秒的流血时间可以让犀牛的近战伤害更大。</li>
+<li>S2（末日之机关枪）是比较主要的输出方式，尤其在面对护甲和抗性的时候可以有效地穿透。</li>
+<li>S3（猛虎出笼）除了施加流血，还根据对方剩余血量的多少提升伤害。不过90%以上加55%的伤害，75%以上加25%，这只有在面对强敌时才有意义，平时短战斗如果都到3格气了还没打掉敌人10%的血也太失败了。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-38" class="section level4 hasAnchor" number="7.3.1.2">
 <h4><span class="header-section-number">7.3.1.2</span> 招牌<a href="科技系.html#招牌-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><strong>超频</strong>：</p>
-<p>犀牛招牌的文字写得佶屈聱牙（英文原文就很拗口，翻译人员显然也没太看懂），跟“超频”也扯不上什么关系。</p>
+<p><strong>超频</strong>：犀牛招牌的文字写得佶屈聱牙（英文原文就很拗口，翻译人员显然也没太看懂），跟“超频”也扯不上什么关系。</p>
 <p>简单说，就是在有盾的时候，敌人单次近战攻击（普攻和特殊中的近战动作）伤害只要超过他们面板攻击力的60%就会爆盾，造成震击反伤。一般出暴击、使用重击或者放特殊技的时候就满足这种情况，于是暴击高的侦查和战士就很容易被犀牛反坑，汽车大师残血打犀牛也会被迅速震死。高觉醒的犀牛如果战力也很高，打起来很是心惊胆战，必须找准机会屈防拆盾。后来官方让侦查系吃爆盾的概率减少了50%，稍微好一点，但是侦查脆弱的身板，偶尔震一下也伤不起。</p>
 <p>犀牛的招牌因挨打而触发，对玩家来说很难主动利用，所以犀牛不特别依赖觉醒。不过觉醒犀牛配上奇怪的折射镜守基地有一定的效果，因为近战屈防拆盾不但会吃到模块的反伤，还有概率晕掉。曾经有盟战的犀牛Boss配了反射远程，几乎不可能屈防，成了盟战药黑洞。</p>
 </div>
@@ -389,15 +388,15 @@
 <h4><span class="header-section-number">7.4.1.1</span> 能力<a href="科技系.html#能力-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>游戏早期的技能描述中语焉不详，使得很多玩家不明白声波能量获取的机制。后来官方在技能中明确提到了：声波通过重击和S2的命中给自己充能量，重击后可充到两格，S2后可充满。</li>
-<li>声波的重击和S2/S3可以稳定地施加震击，这使他的输出有了额外保障，在面对恐电模块时也是最佳选择。</li>
+<li>声波的重击和S2（机器狗）可以稳定地施加震击，这使他的输出有了额外保障，在面对恐电模块时也是最佳选择。</li>
 <li>声波的重击是三连发，身后有空间的时候最好后闪躲开，因为侧闪的时机十分苛刻，早期声波的重击命中几乎是95%，后来暗改之后电脑很喜欢侧闪反击。早期声波用重击打死对手的时候对手还会站起来晕一下再倒地，后来被开发商取消了。</li>
-<li>S1有<del>50%</del>60%的概率晕1.5秒，<del>75%</del>85%的概率能量流失，在平时声波可以用这个手段来控场与控气。</li>
-<li>S3的伤害不高，有40%的概率晕2.5秒，70%的概率出能量锁定8秒。</li>
+<li>S1（音波炮）有60%的概率晕1.5秒，85%的概率能量流失，在平时声波可以用这个手段来控场与控气。</li>
+<li>S3（喷射）的伤害不高，有40%的概率晕2.5秒，70%的概率出能量锁定8秒。</li>
 </ul>
 </div>
 <div id="招牌-39" class="section level4 hasAnchor" number="7.4.1.2">
 <h4><span class="header-section-number">7.4.1.2</span> 招牌<a href="科技系.html#招牌-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>声波护盾：在充满一格气时激活护盾，对能量攻击减伤35%并概率反射远程攻击，造成原始伤害的140%。5级概率20.5%，100级90%。触发反弹与声波是否正在防御无关，铁皮即使S2打中第一发，后面只要声波触发了反弹，会立即解除受创硬直，经常让人大难不死。</p>
+<p><strong>声波护盾</strong>：在充满一格气时激活护盾，对能量攻击减伤35%并概率反射远程攻击，造成原始伤害的140%。5级概率20.5%，100级90%。触发反弹与声波是否正在防御无关，铁皮即使S2打中第一发，后面只要声波触发了反弹，会立即解除受创硬直，经常让人大难不死。</p>
 <p>由于这个招牌是被动触发，所以价值见仁见智，对电脑声波来说，由于电脑“知道”下一次是否会触发，所以电脑声波连面对远程重击也敢格挡。对玩家来说，除了保命，是不可能消极地用防御反弹来应付对方的远程攻击的。</p>
 </div>
 <div id="协同-39" class="section level4 hasAnchor" number="7.4.1.3">
@@ -448,14 +447,14 @@
 <ul>
 <li>防御远程能量型小枪（也就是漂移、雷震和反冲之外的普通远程攻击）时可最多获得3个充能，身上充能数少于3个时防御不扣血。这让震荡波在面对提升射速的幻影和阿尔茜等不会吃亏。</li>
 <li>震荡波每打中一枪小枪消耗一个充能并施加一层震击，重击命中消耗全部充能施加对应层数的震击。在游戏5.1版中对震荡波作出最关键的调整在于，震击时还造成能量流失！这让震荡波不但有输出还有控气能力。</li>
-<li>S1在5.1版中也得到重要增强，在发动S1时获得3个充能（原先这个属性属于S2）。这让震荡波这一招可以成为比肩警车S1的神技，如果在快两格气时，防御吸满3个充能放一招S1再压起身打一套连S1，9层震击带漏气可以打得对手欲哭无泪。</li>
-<li>S2去掉了无用的充能，把修复格挡的能力调整到了100%触发。这个能力明显是为了对标爆威的招牌，在高伤害的同时还阻止修复。震荡波的S2很多玩家比较害怕，其实只要在出枪前连续向下侧闪就可以轻松闪过，不能向上闪。</li>
-<li>S3就是S1和S2的合并版，在游戏的S3中也算上乘之作。</li>
+<li>S1（震荡波）在5.1版中也得到重要增强，在发动S1时获得3个充能（原先这个属性属于S2）。这让震荡波这一招可以成为比肩警车S1的神技，如果在快两格气时，防御吸满3个充能放一招S1再压起身打一套连S1，9层震击带漏气可以打得对手欲哭无泪。</li>
+<li>S2（激光扫描）去掉了无用的充能，把修复格挡的能力调整到了100%触发。这个能力明显是为了对标爆威的招牌，在高伤害的同时还阻止修复。震荡波的S2很多玩家比较害怕，其实只要在出枪前连续向下侧闪就可以轻松闪过，不能向上闪。</li>
+<li>S3（小朋友）就是S1和S2的合并版，在游戏的S3中也算上乘之作。</li>
 </ul>
 </div>
 <div id="招牌-40" class="section level4 hasAnchor" number="7.5.1.2">
 <h4><span class="header-section-number">7.5.1.2</span> 招牌<a href="科技系.html#招牌-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>回溯：在充满一格气时概率触发，对触发后4秒的伤害瞬间补回。概率很低（5级16.8%，100级35%），对玩家来说触发后只要不被秒杀，可以放肆一搏。</p>
+<p><strong>回溯</strong>：在充满一格气时概率触发，对触发后4秒的伤害瞬间补回。概率很低（5级16.8%，100级35%），对玩家来说触发后只要不被秒杀，可以放肆一搏。</p>
 <p>总的来说，这个招牌对玩家的震荡波是无足轻重的，毕竟当你主动打满一格气的时候一般是准备连S技，S技放完等对手起身，4秒钟也不剩多少了。而被电脑揍的时候，你想要触发招牌他又不一定触发……</p>
 </div>
 <div id="协同-40" class="section level4 hasAnchor" number="7.5.1.3">
@@ -518,14 +517,14 @@
 <li>录音机的另一个能力是在每次放大招时获得1个放大充能（最大10层），放大充能让录音机在远程伤害，震击伤害和护盾时间方面逐渐增强，可以说录音机是个比较适合持久战的角色。</li>
 <li>站防0.5秒得到一个减伤护盾，放开防御后0.2秒有效。充能越多，松手后持续时间越长。</li>
 <li>重击100%施加震击，并且出手动作相当隐蔽，面对录音机AI时眼睛要放亮，不然容易被坑。</li>
-<li>S1有概率额外获得充能（最多两个）并60%的概率自行加气（10秒内加最大能量的30%），所以对录音机来说，前三格气全都放S1能最快地占据优势，运气好的话9层分分钟到手。</li>
-<li>S2杀伤力巨大并且出招极快，面对录音机的时候几乎无法纯粹通过预判来侧闪S2。S2施加干扰并且每层放大充能有7%的概率晕3秒。</li>
-<li>S3施加长时间减攻，默认减10%，放大充能越多，额外减得越多。</li>
+<li>S1（功放）有概率额外获得充能（最多两个）并60%的概率自行加气（10秒内加最大能量的30%），所以对录音机来说，前三格气全都放S1能最快地占据优势，运气好的话9层分分钟到手。</li>
+<li>S2（钢钳）杀伤力巨大并且出招极快，面对录音机的时候几乎无法纯粹通过预判来侧闪S2。S2施加干扰并且每层放大充能有7%的概率晕3秒。</li>
+<li>S3（说唱选手）施加长时间减攻，默认减10%，放大充能越多，额外减得越多。</li>
 </ul>
 </div>
 <div id="招牌-41" class="section level4 hasAnchor" number="7.6.1.2">
 <h4><span class="header-section-number">7.6.1.2</span> 招牌<a href="科技系.html#招牌-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>这是一个性能较多的招牌，但是因为中文翻译的问题，很多人不太理解说的是什么：首先，招牌让有盾的录音机面对远程基础能量攻击可以没有受创硬直，尤其是10层充能时就变成了1.2秒的盾，这让录音机额外有了类似野牛那种“充霸体”的能力（注意，对漂移/雷震/反冲的物理攻击无效）。</p>
+<p><strong>吸收护盾</strong>：这是一个性能较多的招牌，但是因为中文翻译的问题，很多人不太理解说的是什么：首先，招牌让有盾的录音机面对远程基础能量攻击可以没有受创硬直，尤其是10层充能时就变成了1.2秒的盾，这让录音机额外有了类似野牛那种“充霸体”的能力（注意，对漂移/雷震/反冲的物理攻击无效）。</p>
 <p>其次，减20%的能量伤害，并且有40%的概率把打在身上的能量伤害用来回血。如果是特殊攻击则双倍回血。</p>
 <p>不过，解释了这么多，这个招牌依然显得略鸡肋。首先那“霸体”能力没有光圈的指示，不能硬扛近战，用起来肯定不放心。其次回血概率恒定为40%，我何必为了这点概率消极防守，再者说跟录音机对枪的对手能有几枪打中录音机？</p>
 </div>
@@ -571,14 +570,14 @@
 <li>攻击升级：提升攻击力和特殊技施加震击的概率</li>
 <li>能量升级：提升能量功率和特殊技能量流失的概率</li>
 <li>如果三个升级都是同样种类，千斤顶会触发回血，随机恢复总血量的10~20%。</li>
-<li>S1：60%概率震击，30%概率能量流失，10%概率晕3秒——可别以为是加起来100%，这三个效果是各自计算的，运气好三个都出，运气不好呵呵哒。</li>
-<li>S2：跟S1一样的效果，外加随机替换所有的升级类别。运气好的话也是有1/9的概率直接回血的。</li>
-<li>S3：跟S2一样的效果，只不过会把三个升级都变成与第一个相同，也就是必然回血。并且就算已经有三个相同的升级，也会再次回血。</li>
+<li>S1（原型）：60%概率震击，30%概率能量流失，10%概率晕3秒——可别以为是加起来100%，这三个效果是各自计算的，运气好三个都出，运气不好呵呵哒。</li>
+<li>S2（迭代）：跟S1一样的效果，外加随机替换所有的升级类别。运气好的话也是有1/9的概率直接回血的。</li>
+<li>S3（完美）：跟S2一样的效果，只不过会把三个升级都变成与第一个相同，也就是必然回血。并且就算已经有三个相同的升级，也会再次回血。</li>
 </ul>
 </div>
 <div id="招牌-42" class="section level4 hasAnchor" number="7.7.1.2">
 <h4><span class="header-section-number">7.7.1.2</span> 招牌<a href="科技系.html#招牌-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>千斤顶没有觉醒基本上就是废的，但是一旦觉醒，当每次受到攻击会令体力降到75%，50%和25%的时候会触发免伤护盾卡住伤害在上述三个数值一段时间，觉醒等级决定护盾时间长短。光是招牌其实只能给千斤顶保命三次，但一旦配备了纳米修复精通，由于护盾卡住伤害，纳米又随机把体力恢复到护盾之上一点点，这就让千斤顶在纳米修复的有效时间内可反复触发护盾。最初这个招牌确实无比bug，后来官方决定保留纳米精通的特性，但是让一层或更多的dot可以破盾，这就让千斤顶的护盾有了解药，而玩家由于可以通过回血来自救，基本上让千斤顶在纳米修复有效期（最长一分钟）内雄风不倒。尤其是在突袭中千斤顶配备流血模块的时候，“血纳千”能让没有DOT的角色郁郁而终，配备科技控制台的“科技千”更是反复刷新科技护盾，除DOT外全场屹立不倒。</p>
+<p><strong>力量护盾</strong>：千斤顶没有觉醒基本上就是废的，但是一旦觉醒，当每次受到攻击会令体力降到75%，50%和25%的时候会触发免伤护盾卡住伤害在上述三个数值一段时间，觉醒等级决定护盾时间长短。光是招牌其实只能给千斤顶保命三次，但一旦配备了纳米修复精通，由于护盾卡住伤害，纳米又随机把体力恢复到护盾之上一点点，这就让千斤顶在纳米修复的有效时间内可反复触发护盾。最初这个招牌确实无比bug，后来官方决定保留纳米精通的特性，但是让一层或更多的dot可以破盾，这就让千斤顶的护盾有了解药，而玩家由于可以通过回血来自救，基本上让千斤顶在纳米修复有效期（最长一分钟）内雄风不倒。尤其是在突袭中千斤顶配备流血模块的时候，“血纳千”能让没有DOT的角色郁郁而终，配备科技控制台的“科技千”更是反复刷新科技护盾，除DOT外全场屹立不倒。</p>
 </div>
 <div id="协同-42" class="section level4 hasAnchor" number="7.7.1.3">
 <h4><span class="header-section-number">7.7.1.3</span> 协同<a href="科技系.html#协同-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -635,15 +634,15 @@
 <li>重击命中消耗一个充能，施加一层震击。无充能则无震击。</li>
 <li>如果放S技时没有充能，则获得一个。
 <ul>
-<li>S1将全部充能变成远程伤害（充能越多，伤害越高），并提升射速10%（与充能数无关），持续20秒。如果带着5层或以上的充能放S1，将锁气8秒。实测发现，在这20秒内，如果再攒出一个S1放出去，则不管你身上有没有充能，都会再次触发能量锁定，这个可能是卡邦设定上的疏忽。</li>
-<li>S2将全部充能变成减伤护盾，持续20秒。如果5层或以上充能同时转化，将施加15秒的修复阻止。</li>
-<li>S3将全部充能变成震击。S3结束后再得到3个充能。</li>
+<li>S1（武器全功率）将全部充能变成远程伤害（充能越多，伤害越高），并提升射速10%（与充能数无关），持续20秒。如果带着5层或以上的充能放S1，将锁气8秒。实测发现，在这20秒内，如果再攒出一个S1放出去，则不管你身上有没有充能，都会再次触发能量锁定，这个可能是卡邦设定上的疏忽。</li>
+<li>S2（强化护盾）将全部充能变成减伤护盾，持续20秒。如果5层或以上充能同时转化，将施加15秒的修复阻止。</li>
+<li>S3（意志之火）将全部充能变成震击。S3结束后再得到3个充能。</li>
 </ul></li>
 </ul>
 </div>
 <div id="招牌-43" class="section level4 hasAnchor" number="7.8.1.2">
 <h4><span class="header-section-number">7.8.1.2</span> 招牌<a href="科技系.html#招牌-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>75%血以下时会提示“伤害控制在线”，此时站防1秒能消耗一个充能给自己回血，并净化一个燃烧减益，一直按住防御会连续回血。5级回血2%，100级回血6%。</p>
+<p><strong>伤害控制</strong>：75%血以下时会提示“伤害控制在线”，此时站防1秒能消耗一个充能给自己回血，并净化一个燃烧减益，一直按住防御会连续回血。5级回血2%，100级回血6%。</p>
 <p>天火的招牌还是非常实用的，把回血做到明处，没有概率，但这也让电脑的天火（尤其是传奇3里面的那只）变得非常皮实。在科技系里面，天火的招牌可以比较放心喂程序给他。因为到了100级的招牌，一个充能回血6%，想想在盟战里面一个小药才5%。只要保护好自己，天火的回血可以让他很安逸地把战斗拖延下去。</p>
 </div>
 <div id="协同-43" class="section level4 hasAnchor" number="7.8.1.3">
@@ -707,15 +706,15 @@
 <li>传送攻击有更高的暴击率，不可防御，有50%的概率施加能量锁定（这让闹翻天有很强的控制力），并且100%净化自己身上的燃烧减益</li>
 </ul></li>
 <li>普通远程和重击如果出暴击，都有概率能施加一段时间的特殊伤害减益</li>
-<li>S1：如果拥有传送充能，则S技之后的9秒内可以通过远程攻击来施加能量燃烧，类似幻影的S1</li>
-<li>S2：如果拥有传送充能，则获得一个抗暴护盾，减少70%的暴击伤害，直到闹翻天下一次传送。</li>
-<li>S3：偷取对方25~50%的最大能量（不需要有传送充能在身），并且如果直接将对手能量减为0，则在剩下的战斗中闹翻天的能量功率得到提升。</li>
+<li>S1诡诈打击）：如果拥有传送充能，则S技之后的9秒内可以通过远程攻击来施加能量燃烧，类似幻影的S1</li>
+<li>S2（从天而降的死亡）：如果拥有传送充能，则获得一个抗暴护盾，减少70%的暴击伤害，直到闹翻天下一次传送。</li>
+<li>S3（追随者打击）：偷取对方25~50%的最大能量（不需要有传送充能在身），并且如果直接将对手能量减为0，则在剩下的战斗中闹翻天的能量功率得到提升。</li>
 </ul>
 <p>从技能上看，闹翻天一方面能有效控制对方的能量，另一方面又有效地保护着自己，在科技中这是偏侵略性的设计</p>
 </div>
 <div id="招牌-44" class="section level4 hasAnchor" number="7.9.1.2">
 <h4><span class="header-section-number">7.9.1.2</span> 招牌<a href="科技系.html#招牌-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>拥有传送充能时有概率规避对方特殊攻击的最后一下，也就是说即便被S技打中也有概率最后脱身。对玩家来说是手残党的福音，不但可以躲掉致命一击（尤其是很多爆破系的S技），还可以把手残转化为反击机会。可惜玩家要高觉醒还是很费招牌的，所以又是一个电脑受益的技巧（这也基本上延续了科技系招牌大多对玩家作用不大的特点）。</p>
+<p><strong>打完就跑</strong>：拥有传送充能时有概率规避对方特殊攻击的最后一下，也就是说即便被S技打中也有概率最后脱身。对玩家来说是手残党的福音，不但可以躲掉致命一击（尤其是很多爆破系的S技），还可以把手残转化为反击机会。可惜玩家要高觉醒还是很费招牌的，所以又是一个电脑受益的技巧（这也基本上延续了科技系招牌大多对玩家作用不大的特点）。</p>
 <p>在有一些玩家的录像中，看到闹翻天对普通近战也会出传送逃走，目前尚不知是bug还是有意为之。</p>
 </div>
 <div id="协同-44" class="section level4 hasAnchor" number="7.9.1.3">
