--- a/chars_book/饿鲨.html
+++ b/chars_book/饿鲨.html
@@ -197,15 +197,15 @@
 <div id="饿鲨" class="section level1 hasAnchor" number="9">
 <h1><span class="header-section-number">9</span> 饿鲨<a href="饿鲨.html#饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>饿鲨在这个游戏中一直是NPC的存在。虽然饿鲨在动作与技能上都Copy普通的机器人，但是在基础数据和战力上差了差不多一阶。官方在2018年2月将其变成可拥有角色，属于饿鲨专属水晶。</p>
-<p>饿鲨在未觉醒前，特殊1和2均无额外效果。饿鲨拥有相同的S3技能，在队伍中全部都是饿鲨时，S3能回血。</p>
+<p>饿鲨在未觉醒前，特殊1和2均无额外效果。饿鲨拥有相同的S3技能（饿鲨来袭），在队伍中全部都是饿鲨时，S3能回血。</p>
 <p>由于饿鲨在锻造方面提供比普通机器人更多的经验，从而“养鱼”也成了锻造中的一门学问。</p>
 <div id="战术饿鲨" class="section level2 hasAnchor" number="9.1">
 <h2><span class="header-section-number">9.1</span> 战术饿鲨<a href="饿鲨.html#战术饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>拳路：通天晓/救护车/警车</li>
-<li>S1：战术大黄蜂。概率获得攻击加成</li>
-<li>S2：战擎。每一击概率破甲</li>
-<li>招牌：仿通天晓的10层抗性切换</li>
+<li>S1（甩鳍）：战术大黄蜂。概率获得攻击加成</li>
+<li>S2（猛力一砍）：战擎。每一击概率破甲</li>
+<li>招牌（鲨鱼强化）：仿通天晓的10层抗性切换</li>
 </ul>
 <p>战术饿鲨抗打性很好，偶尔一个S2也能打出很高的输出。对战时要注意交替物理与能量攻击。</p>
 </div>
@@ -213,9 +213,9 @@
 <h2><span class="header-section-number">9.2</span> 斗士饿鲨<a href="饿鲨.html#斗士饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>拳路：斗擎/声波</li>
-<li>S1：碾碎器。概率降对手暴击</li>
-<li>S2：汽车大师。概率变得不可阻挡</li>
-<li>招牌：仿碾碎器，被击中概率获得护甲</li>
+<li>S1（鲨鱼疗法）：碾碎器。概率降对手暴击</li>
+<li>S2（不可阻挡的狂暴）：汽车大师。概率变得不可阻挡</li>
+<li>招牌（鲨鱼强化）：仿碾碎器，被击中概率获得护甲</li>
 </ul>
 <p>斗士饿鲨的护甲能力很强，比较耐打。</p>
 </div>
@@ -223,9 +223,9 @@
 <h2><span class="header-section-number">9.3</span> 战士饿鲨<a href="饿鲨.html#战士饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>刀路：风刃/雷震，并带刀</li>
-<li>S1：雷震。概率流血</li>
-<li>S2：风刃。护甲穿透，概率流血</li>
-<li>招牌：近战暴击概率流血</li>
+<li>S1（鲨鱼之道）：雷震。概率流血</li>
+<li>S2（鲨鱼舞）：风刃。护甲穿透，概率流血</li>
+<li>招牌（鲨鱼强化）：近战暴击概率流血</li>
 </ul>
 <p>战士饿鲨比较脆皮，大招比较好骗，在6个饿鲨中属于容易对付的。</p>
 </div>
@@ -233,9 +233,9 @@
 <h2><span class="header-section-number">9.4</span> 侦查饿鲨<a href="饿鲨.html#侦查饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>拳路：横炮</li>
-<li>S1：横炮。概率获得暴击率加成</li>
-<li>S2：警车。护甲穿透，概率获得远程攻击加成。</li>
-<li>招牌：仿路障，起身规避</li>
+<li>S1（大摇大摆的鲨鱼）：横炮。概率获得暴击率加成</li>
+<li>S2（枪手鱼）：警车。护甲穿透，概率获得远程攻击加成。</li>
+<li>招牌（鲨鱼强化）：仿路障，起身规避</li>
 </ul>
 <p>侦查饿鲨有路障的自保，高暴击和警车的S2，对战时要注意骗招及减少重击。</p>
 </div>
@@ -243,9 +243,9 @@
 <h2><span class="header-section-number">9.5</span> 科技饿鲨<a href="饿鲨.html#科技饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>拳路：通天晓/救护车/警车</li>
-<li>S1：震荡波。汲取能量</li>
-<li>S2：幻影。第二击不可防御</li>
-<li>招牌：仿犀牛6层护盾</li>
+<li>S1（鲨鱼爆炸）：震荡波。汲取能量</li>
+<li>S2（指如疾风，鳍如闪电）：幻影。第二击不可防御</li>
+<li>招牌（鲨鱼强化）：仿犀牛6层护盾</li>
 </ul>
 <p>科技饿鲨虽有护盾但没有反伤，战斗中主要注意拆完盾再打S技。S1的偷气比震荡波和警车都要强，S2不可防御要小心被坑。</p>
 </div>
@@ -253,9 +253,9 @@
 <h2><span class="header-section-number">9.6</span> 爆破饿鲨<a href="饿鲨.html#爆破饿鲨" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>拳路：碾碎器</li>
-<li>S1：铁皮。概率击晕</li>
-<li>S2：爆威。概率获得远程攻击加成</li>
-<li>招牌：仿黄蜂勇士，半血以下获得特殊攻击加成</li>
+<li>S1（牙齿倍儿棒）：铁皮。概率击晕</li>
+<li>S2（和平、暴政和用餐时间）：爆威。概率获得远程攻击加成</li>
+<li>招牌（鲨鱼强化）：仿黄蜂勇士，半血以下获得特殊攻击加成</li>
 </ul>
 <p>爆破饿鲨虽然S1像铁皮但不会燃烧，总体来说比较好打，主要小心被S2坑掉大量血。</p>
 </div>
@@ -264,9 +264,9 @@
 <p>S-1000在2019年2月的饿鲨周加入五星饿鲨水晶，概率只有5%，由于从NPC变成玩家可拥有，必须要有类别，于是偷了警车霰弹枪的他，被安排到了侦查系，<del>基础数值属于正常机器人的水准</del>虽然战力看起来像是正常机器人的水准，实际基础数值（攻血）还是饿鲨的档次，难堪大用。而且开始的时候连基地生产黄金的能力都不如同阶的五星机器人，让很多想把泰坦币商店“七大员”全放基地的玩家（比如本人）强迫症都要犯了，后来在6阶机器人发布的过程中调整为与五星机器人一致。（不过现在不要紧了，飞过山出了）</p>
 <ul>
 <li>拳路：横炮</li>
-<li>S1：横炮</li>
-<li>S2：警车</li>
-<li>招牌：复制加成</li>
+<li>S1（大摇大摆的饿鲨-1000）：横炮</li>
+<li>S2（饿鲨-1000枪手鱼）：警车</li>
+<li>招牌（鲨鱼强化）：复制加成</li>
 <li>血量降到20%血以下时（被从20%血以上秒杀除外）有50%概率触发以下两个能力之一，一局只触发一次：
 <ul>
 <li>饿鲨万岁：仿爆威，回血</li>
